--- a/transforms/ri/ocri/r70/gov.ri.code.constitution.ri.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.constitution.ri.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="tConstitutionoftheState">
     <b>
      Constitution of the State of Rhode Island
@@ -27531,9 +27534,12 @@
        <p>
         Supreme court would not render advisory opinion under this section on signed sworn petition of majority of house claiming presiding officer denied rights to function as a house to present request, where they did not formally in meeting assembled vote for such request, since court assumes officer when notified of duty will follow mandatory direction of
         <cite class="ocri">
-         R.I. Const., Art.
+         <cite class="ocri">
+          R.I. Const., Art.
+         </cite>
+         IV, § 8
         </cite>
-        IV, § 8 (now see
+        (now see
         <cite class="ocri">
          R.I. Const., Art.
         </cite>
