--- a/transforms/ri/ocri/r70/gov.ri.code.constitution.us.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.constitution.us.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="tCONSTITUTIONOFTHEUNITEDSTATES">
     <b>
      CONSTITUTION OF THE UNITED STATES
@@ -14593,7 +14596,19 @@
     (R.I. 1991).
    </p>
    <p>
-    A claim that the Eviction Act, §§ 36-9.1-1 and 36-9.1-2, which evicted from membership in the Retirement System any individual who became a member based solely on repealed § 36-9-33, constitutes a taking of teacher union employees’ private property without just compensation in contravention of the Taking Clause of the Fifth Amendment survived a motion to dismiss since the alleged value of the extinguished retirement benefits was greater than the amount of money that would be returned to the employees by the statute.
+    A claim that the Eviction Act, §§
+    <cite class="ocri">
+     <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c9.1s36-9.1-1" target="_blank">
+      36-9.1-1
+     </a>
+    </cite>
+    and
+    <cite class="ocri">
+     <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c9.1s36-9.1-2" target="_blank">
+      36-9.1-2
+     </a>
+    </cite>
+    , which evicted from membership in the Retirement System any individual who became a member based solely on repealed § 36-9-33, constitutes a taking of teacher union employees’ private property without just compensation in contravention of the Taking Clause of the Fifth Amendment survived a motion to dismiss since the alleged value of the extinguished retirement benefits was greater than the amount of money that would be returned to the employees by the statute.
     National Educ. Association-Rhode Island by Scigulinsky v. Retirement Bd. of the R.I. Emples. Retirement Sys., 890 F. Supp. 1143, 1995 U.S. Dist. LEXIS 9592 (D.R.I. 1995).
    </p>
    <p>
@@ -20229,9 +20244,12 @@
    <p>
     Although felony trials should take place within six months of the indictment, such a policy should not be construed as indicating that a failure to meet that goal in a particular case amounts to a denial of the right to a speedy trial guaranteed by
     <cite class="ocri">
-     R.I. Const., Art.
+     <cite class="ocri">
+      R.I. Const., Art.
+     </cite>
+     I, § 10
     </cite>
-    I, § 10 (see now
+    (see now
     <cite class="ocri">
      R.I. Const., Art.
     </cite>
@@ -24631,7 +24649,19 @@
     Where there are adequate state remedies to compensate a plaintiff for the loss of property he has suffered, the mandates of the due process clause are satisfied. Parente v. Town of West Warwick, 685 F. Supp. 873, 1988 U.S. Dist. LEXIS 4172 (D.R.I. 1988), aff'd, 868 F.2d 522, 1989 U.S. App. LEXIS 2413 (1st Cir. 1989).
    </p>
    <p>
-    A claim that the Eviction Act, §§ 36-9.1-1 and 36-9.1-2, which evicted from membership in the Retirement System any individual who became a member based solely on repealed § 36-9-33, deprived teacher union employees of property without due process of law survived a motion to dismiss, since the employees, who had voluntarily contributed to the Retirement System for four years, had a property interest in their pension benefits and the Retirement Board did not articulate a legitimate purpose for the Act as a matter of law.
+    A claim that the Eviction Act, §§
+    <cite class="ocri">
+     <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c9.1s36-9.1-1" target="_blank">
+      36-9.1-1
+     </a>
+    </cite>
+    and
+    <cite class="ocri">
+     <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c9.1s36-9.1-2" target="_blank">
+      36-9.1-2
+     </a>
+    </cite>
+    , which evicted from membership in the Retirement System any individual who became a member based solely on repealed § 36-9-33, deprived teacher union employees of property without due process of law survived a motion to dismiss, since the employees, who had voluntarily contributed to the Retirement System for four years, had a property interest in their pension benefits and the Retirement Board did not articulate a legitimate purpose for the Act as a matter of law.
     National Educ. Association-Rhode Island by Scigulinsky v. Retirement Bd. of the R.I. Emples. Retirement Sys., 890 F. Supp. 1143, 1995 U.S. Dist. LEXIS 9592 (D.R.I. 1995).
    </p>
    <p>
