--- a/transforms/ri/ocri/r70/gov.ri.code.title.02.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.02.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t02">
     <b>
      Title 2 Agriculture and Forestry
@@ -327,7 +330,13 @@
         .
        </p>
        <p>
-        Section 2-1-4 (G.L. 1938, ch. 241, § 5; P.L. 1927, ch. 1014, § 1; G.L. 1938, ch. 201, § 3; impl. am. P.L. 1939, ch. 660, § 160; impl. am. P.L. 1952, ch. 2975, § 17; G.L. 1956, § 2-1-4) is superseded by § 42-17.1-5.
+        Section 2-1-4 (G.L. 1938, ch. 241, § 5; P.L. 1927, ch. 1014, § 1; G.L. 1938, ch. 201, § 3; impl. am. P.L. 1939, ch. 660, § 160; impl. am. P.L. 1952, ch. 2975, § 17; G.L. 1956, § 2-1-4) is superseded by §
+        <cite class="ocri">
+         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.42.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t42c17.1s42-17.1-5" target="_blank">
+          42-17.1-5
+         </a>
+        </cite>
+        .
        </p>
       </div>
      </div>
@@ -4201,7 +4210,37 @@
       </b>
      </h4>
      <p>
-      The former chapter (P.L. 1929, ch. 1434, §§ 1-5, 7, 8, 10-14; G.L. 1938, ch. 210, §§ 1-4, 7, 8, 10-14; G.L., ch. 210, §§ 1-11; P.L. 1953, ch. 3147, § 1; G.L. 1956, §§ 2-6-1 — 2-6-19), concerning the seed trade, was repealed by P.L. 1978, ch. 371, § 1 effective January 1, 1979, and the present provisions substituted therefor.
+      The former chapter (P.L. 1929, ch. 1434, §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c05" target="_blank">
+        1-5
+       </a>
+      </cite>
+      , 7, 8,
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.10.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t10c14" target="_blank">
+        10-14
+       </a>
+      </cite>
+      ; G.L. 1938, ch. 210, §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c04" target="_blank">
+        1-4
+       </a>
+      </cite>
+      , 7, 8,
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.10.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t10c14" target="_blank">
+        10-14
+       </a>
+      </cite>
+      ; G.L., ch. 210, §§ 1-11; P.L. 1953, ch. 3147, § 1; G.L. 1956, §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.02.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t02c06s2-6-1" target="_self">
+        2-6-1
+       </a>
+      </cite>
+      — 2-6-19), concerning the seed trade, was repealed by P.L. 1978, ch. 371, § 1 effective January 1, 1979, and the present provisions substituted therefor.
      </p>
     </div>
     <div>
@@ -5021,7 +5060,13 @@
        </b>
       </h4>
       <p>
-       The former chapter (P.L. 1953, ch. 3148, §§ 1-15; G.L. 1956, §§ 2-7-1 to 2-7-32), concerning commercial fertilizer, was repealed by P.L. 1977, ch. 164, § 2 and by P.L. 1977, ch. 168, § 1, both effective January 1, 1978, and the present provisions substituted therefor.
+       The former chapter (P.L. 1953, ch. 3148, §§ 1-15; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.02.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t02c07s2-7-1" target="_self">
+         2-7-1
+        </a>
+       </cite>
+       to 2-7-32), concerning commercial fertilizer, was repealed by P.L. 1977, ch. 164, § 2 and by P.L. 1977, ch. 168, § 1, both effective January 1, 1978, and the present provisions substituted therefor.
       </p>
      </div>
      <div>
@@ -5406,7 +5451,13 @@
       </b>
      </h3>
      <p>
-      For the purpose of determining the commercial value to be applied under the provisions of § 2-7-8, the director shall determine and publish annually the values per unit of nitrogen, available phosphoric acid, and soluble potash in commercial fertilizers in this state. If guarantees are as provided in § 2-7-3(8)(ii), the value shall be per unit of nitrogen, phosphorus, and potassium. The values so determined and published shall be used in determining and assessing penalties.
+      For the purpose of determining the commercial value to be applied under the provisions of §
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.02.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t02c07s2-7-8" target="_self">
+        2-7-8
+       </a>
+      </cite>
+      , the director shall determine and publish annually the values per unit of nitrogen, available phosphoric acid, and soluble potash in commercial fertilizers in this state. If guarantees are as provided in § 2-7-3(8)(ii), the value shall be per unit of nitrogen, phosphorus, and potassium. The values so determined and published shall be used in determining and assessing penalties.
      </p>
      <div>
       <h4 id="t02c07s2-7-9-historyofsection">
@@ -5737,7 +5788,19 @@
        </b>
       </h4>
       <p>
-       This chapter (P.L. 1951, ch. 2832, §§ 1-11, 13; P.L. 1952, ch. 3008, §§ 1-13; G.L. 1956, §§ 2-8-1 — 2-8-28; P.L. 1977, ch. 90, § 3), consisting of §§ 2-8-1 — 2-8-28 and concerning economic poisons, was repealed by P.L. 1987, ch. 323, § 1, effective June 30, 1987. For present provisions of law, see chapter 25 of title 23.
+       This chapter (P.L. 1951, ch. 2832, §§ 1-11, 13; P.L. 1952, ch. 3008, §§ 1-13; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.02.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t02c08s2-8-1" target="_self">
+         2-8-1
+        </a>
+       </cite>
+       — 2-8-28; P.L. 1977, ch. 90, § 3), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.02.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t02c08s2-8-1" target="_self">
+         2-8-1
+        </a>
+       </cite>
+       — 2-8-28 and concerning economic poisons, was repealed by P.L. 1987, ch. 323, § 1, effective June 30, 1987. For present provisions of law, see chapter 25 of title 23.
       </p>
      </div>
     </div>
