--- a/transforms/ri/ocri/r70/gov.ri.code.title.03.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.03.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t03">
     <b>
      Title 3. Alcoholic Beverages
@@ -11200,7 +11203,13 @@
        </b>
       </h4>
       <p>
-       In 2015, the reference in this section to subdivision 3-10-1(6)b was changed to 3-10-1(b) to correct an apparent typo.
+       In 2015, the reference in this section to subdivision 3-10-1(6)b was changed to
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.03.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t03c10s3-10-1ol1b" target="_self">
+         3-10-1(b)
+        </a>
+       </cite>
+       to correct an apparent typo.
       </p>
      </div>
     </div>
@@ -11807,6 +11816,54 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t03c07s3-7-19-notestodecisions-challengetostatute">
+          Challenge to Statute.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t03c07s3-7-19-notestodecisions-challengetostatute-standing">
+            — Standing.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t03c07s3-7-19-notestodecisions-churches">
+          Churches.
+         </a>
+        </li>
+        <li>
+         <a href="#t03c07s3-7-19-notestodecisions-extentofreview">
+          Extent of Review.
+         </a>
+        </li>
+        <li>
+         <a href="#t03c07s3-7-19-notestodecisions-methodofmeasurement">
+          Method of Measurement.
+         </a>
+        </li>
+        <li>
+         <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners">
+          Objections of Landowners.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners-effectonjurisdiction">
+            — Effect on Jurisdiction.
+           </a>
+          </li>
+          <li>
+           <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners-evidence">
+            — Evidence.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t03c07s3-7-19-notestodecisions-challengetostatute">
         <b>
@@ -12040,52 +12097,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t03c07s3-7-19-notestodecisions-challengetostatute">
-          Challenge to Statute.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t03c07s3-7-19-notestodecisions-challengetostatute-standing">
-            — Standing.
-           </a>
-          </li>
-         </ul>
-        </li>
-        <li>
-         <a href="#t03c07s3-7-19-notestodecisions-churches">
-          Churches.
-         </a>
-        </li>
-        <li>
-         <a href="#t03c07s3-7-19-notestodecisions-extentofreview">
-          Extent of Review.
-         </a>
-        </li>
-        <li>
-         <a href="#t03c07s3-7-19-notestodecisions-methodofmeasurement">
-          Method of Measurement.
-         </a>
-        </li>
-        <li>
-         <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners">
-          Objections of Landowners.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners-effectonjurisdiction">
-            — Effect on Jurisdiction.
-           </a>
-          </li>
-          <li>
-           <a href="#t03c07s3-7-19-notestodecisions-objectionsoflandowners-evidence">
-            — Evidence.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t03c07s3-7-21-notestodecisions-certioraritosupremecourt">
@@ -12570,7 +12581,13 @@
       </b>
      </h3>
      <p>
-      Every licensee under this chapter, upon filing an application for renewal or transfer of a license, shall submit with the application a certificate executed by the tax administrator, or some employee designated by the tax administrator, that taxes due the state have been paid. For the purposes of this section, “taxes due the state” shall include contributions due including taxes, interest and penalties due to the department of labor and training pursuant to the employment security act, chapters 42-44 of title 28, and temporary disability insurance act, chapters 39-41 of title 28. No license under this chapter shall be renewed or transferred without that certificate.
+      Every licensee under this chapter, upon filing an application for renewal or transfer of a license, shall submit with the application a certificate executed by the tax administrator, or some employee designated by the tax administrator, that taxes due the state have been paid. For the purposes of this section, “taxes due the state” shall include contributions due including taxes, interest and penalties due to the department of labor and training pursuant to the employment security act, chapters
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.42.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t42c44" target="_blank">
+        42-44
+       </a>
+      </cite>
+      of title 28, and temporary disability insurance act, chapters 39-41 of title 28. No license under this chapter shall be renewed or transferred without that certificate.
      </p>
      <div>
       <h4 id="t03c07s3-7-24-historyofsection">
@@ -16449,7 +16466,13 @@
       </p>
       <p>
        Conn.
-       Gen. Stat. §§ 30-6, 30-107.
+       Gen. Stat. §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.30.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t30c06" target="_blank">
+         30-6
+        </a>
+       </cite>
+       , 30-107.
       </p>
       <p>
        Mass.
