--- a/transforms/ri/ocri/r70/gov.ri.code.title.08.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.08.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t08">
     <b>
      Title 8 Courts and Civil Procedure — Courts
@@ -4432,6 +4435,32 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t08c02s8-2-16-notestodecisions-prerogativewrits">
+          Prerogative Writs.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c02s8-2-16-notestodecisions-quowarranto">
+          Quo Warranto.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c02s8-2-16-notestodecisions-writsofmandamus">
+          Writs of Mandamus.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t08c02s8-2-16-notestodecisions-writsofmandamus-damages">
+            — Damages.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t08c02s8-2-16-notestodecisions-prerogativewrits">
         <b>
@@ -4703,30 +4732,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t08c02s8-2-16-notestodecisions-prerogativewrits">
-          Prerogative Writs.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c02s8-2-16-notestodecisions-quowarranto">
-          Quo Warranto.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c02s8-2-16-notestodecisions-writsofmandamus">
-          Writs of Mandamus.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t08c02s8-2-16-notestodecisions-writsofmandamus-damages">
-            — Damages.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t08c02s8-2-17-notestodecisions-actionsonsuretybond">
@@ -13394,6 +13399,62 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-appeals">
+          Appeals.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-districtcourtsittingashousingcourt">
+          District Court Sitting as Housing Court.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-illustrativeexamples">
+          Illustrative Examples.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-scopeofrelief">
+          Scope of Relief.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-taxmatters">
+          Tax Matters.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-tenementslet">
+          Tenements Let.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-testofjurisdiction">
+          Test of Jurisdiction.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment">
+          Trespass and Ejectment.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment-jurisdiction">
+            — Jurisdiction.
+           </a>
+          </li>
+          <li>
+           <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment-speedytrial">
+            — Speedy Trial.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t08c08s8-8-3-notestodecisions-appeals">
         <b>
@@ -13744,60 +13805,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-appeals">
-          Appeals.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-districtcourtsittingashousingcourt">
-          District Court Sitting as Housing Court.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-illustrativeexamples">
-          Illustrative Examples.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-scopeofrelief">
-          Scope of Relief.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-taxmatters">
-          Tax Matters.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-tenementslet">
-          Tenements Let.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-testofjurisdiction">
-          Test of Jurisdiction.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment">
-          Trespass and Ejectment.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment-jurisdiction">
-            — Jurisdiction.
-           </a>
-          </li>
-          <li>
-           <a href="#t08c08s8-8-3-notestodecisions-trespassandejectment-speedytrial">
-            — Speedy Trial.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t08c08s8-8-3.1-notestodecisions-districtcourtsittingashousingcourt">
@@ -17207,7 +17214,13 @@
        A party aggrieved by a final order of the traffic tribunal appeals panel shall be entitled to a review of the order by a judge of the district court. Unless otherwise provided in the rules of procedure of the district court, the review shall be on the record and appellate in nature. The district court shall by rules of procedure establish procedures for review of an order entered by the appeals panel of the traffic tribunal.
       </li>
       <li id="t08c8.2s8-8.2-2ol1e">
-       Violations of any statute, rule, ordinance, or regulation referenced in this section are subject to fines enumerated in § 31-41.1-4, except for violations of §§ 21-28-4.01(c)(2)(iii) and 21-28-4.01(c)(2)(iv).
+       Violations of any statute, rule, ordinance, or regulation referenced in this section are subject to fines enumerated in §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.31.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t31c41.1s31-41.1-4" target="_blank">
+         31-41.1-4
+        </a>
+       </cite>
+       , except for violations of §§ 21-28-4.01(c)(2)(iii) and 21-28-4.01(c)(2)(iv).
       </li>
      </ol>
      <div>
@@ -17363,7 +17376,13 @@
        When any person is suspected of having committed a felony the superintendent of state police shall be notified following the suspected felon’s arrest.
       </li>
       <li id="t08c8.2s8-8.2-5ol1d">
-       When acting as a constable with the authorization of the Chief Magistrate, he or she may exercise all powers under Rhode Island §§ 8-8-12(10) and 8-8-23.
+       When acting as a constable with the authorization of the Chief Magistrate, he or she may exercise all powers under Rhode Island §§ 8-8-12(10) and
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.08.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t08c08s8-8-23" target="_self">
+         8-8-23
+        </a>
+       </cite>
+       .
       </li>
      </ol>
      <div>
@@ -26632,6 +26651,22 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t08c16s8-16-12-notestodecisions-confidentiality">
+          Confidentiality.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t08c16s8-16-12-notestodecisions-confidentiality-waiver">
+            — Waiver.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t08c16s8-16-12-notestodecisions-confidentiality">
         <b>
@@ -26747,20 +26782,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t08c16s8-16-12-notestodecisions-confidentiality">
-        Confidentiality.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t08c16s8-16-12-notestodecisions-confidentiality-waiver">
-          — Waiver.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t08c16.1s8-16.1-1-snav01">
        <a href="#t08c16.1s8-16.1-1">
@@ -27060,6 +27081,32 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t08c16.1s8-16.1-5-notestodecisions-deathofnominee">
+          Death of Nominee.
+         </a>
+        </li>
+        <li>
+         <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection">
+          Rejection.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection-failuretoact">
+            — Failure to Act.
+           </a>
+          </li>
+          <li>
+           <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection-withdrawal">
+            — Withdrawal.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t08c16.1s8-16.1-5-notestodecisions-deathofnominee">
         <b>
@@ -27232,30 +27279,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t08c16.1s8-16.1-5-notestodecisions-deathofnominee">
-        Death of Nominee.
-       </a>
-      </li>
-      <li>
-       <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection">
-        Rejection.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection-failuretoact">
-          — Failure to Act.
-         </a>
-        </li>
-        <li>
-         <a href="#t08c16.1s8-16.1-5-notestodecisions-rejection-withdrawal">
-          — Withdrawal.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t08c17s8-17-1-snav01">
        <a href="#t08c17s8-17-1">
