--- a/transforms/ri/ocri/r70/gov.ri.code.title.12.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.12.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t12">
     <b>
      Title 12 Criminal Procedure
@@ -12340,6 +12343,32 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c07s12-7-4-notestodecisions-falsearrest">
+          False Arrest.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause">
+          Reasonable Grounds or Probable Cause.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause-reasonablegroundsnotpresent">
+            — Reasonable Grounds Not Present.
+           </a>
+          </li>
+          <li>
+           <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause-reasonablegroundspresent">
+            — Reasonable Grounds Present.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c07s12-7-4-notestodecisions-falsearrest">
         <b>
@@ -12526,30 +12555,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c07s12-7-4-notestodecisions-falsearrest">
-          False Arrest.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause">
-          Reasonable Grounds or Probable Cause.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause-reasonablegroundsnotpresent">
-            — Reasonable Grounds Not Present.
-           </a>
-          </li>
-          <li>
-           <a href="#t12c07s12-7-4-notestodecisions-reasonablegroundsorprobablecause-reasonablegroundspresent">
-            — Reasonable Grounds Present.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t12c07s12-7-5-notestodecisions-probablecause">
@@ -24398,6 +24403,39 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c17s12-17-1-notestodecisions-natureofappeal">
+          Nature of Appeal.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c17s12-17-1-notestodecisions-venue">
+          Venue.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses">
+            — Specific Offenses.
+           </a>
+           <ul class="leaders">
+            <li>
+             <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses-conspiracy">
+              — —  Conspiracy.
+             </a>
+            </li>
+            <li>
+             <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses-stolengoods">
+              — —  Stolen Goods.
+             </a>
+            </li>
+           </ul>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c17s12-17-1-notestodecisions-natureofappeal">
         <b>
@@ -24590,37 +24628,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c17s12-17-1-notestodecisions-natureofappeal">
-          Nature of Appeal.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c17s12-17-1-notestodecisions-venue">
-          Venue.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses">
-            — Specific Offenses.
-           </a>
-           <ul class="leaders">
-            <li>
-             <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses-conspiracy">
-              — —  Conspiracy.
-             </a>
-            </li>
-            <li>
-             <a href="#t12c17s12-17-1-notestodecisions-venue-specificoffenses-stolengoods">
-              — —  Stolen Goods.
-             </a>
-            </li>
-           </ul>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t12c17s12-17-3-notestodecisions-factorsconsidered">
@@ -26001,6 +26008,42 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c17s12-17-16-notestodecisions-construction">
+          Construction.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c17s12-17-16-notestodecisions-burdenofprovingadmissibility">
+          Burden of Proving Admissibility.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c17s12-17-16-notestodecisions-fishingexpeditionsprohibited">
+          “Fishing Expeditions” Prohibited.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c17s12-17-16-notestodecisions-legislativeintent">
+          Legislative Intent.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c17s12-17-16-notestodecisions-tangibleevidence">
+          Tangible Evidence.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c17s12-17-16-notestodecisions-tangibleevidence-excludedevidence">
+            — Excluded Evidence.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c17s12-17-16-notestodecisions-construction">
         <b>
@@ -26250,40 +26293,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t12c17s12-17-16-notestodecisions-construction">
-        Construction.
-       </a>
-      </li>
-      <li>
-       <a href="#t12c17s12-17-16-notestodecisions-burdenofprovingadmissibility">
-        Burden of Proving Admissibility.
-       </a>
-      </li>
-      <li>
-       <a href="#t12c17s12-17-16-notestodecisions-fishingexpeditionsprohibited">
-        “Fishing Expeditions” Prohibited.
-       </a>
-      </li>
-      <li>
-       <a href="#t12c17s12-17-16-notestodecisions-legislativeintent">
-        Legislative Intent.
-       </a>
-      </li>
-      <li>
-       <a href="#t12c17s12-17-16-notestodecisions-tangibleevidence">
-        Tangible Evidence.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c17s12-17-16-notestodecisions-tangibleevidence-excludedevidence">
-          — Excluded Evidence.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t12c18s12-18-1-snav01">
        <a href="#t12c18s12-18-1">
@@ -31415,6 +31424,54 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-constitutionality">
+          Constitutionality.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c19s12-19-21-notestodecisions-constitutionality-cruelandunusualpunishment">
+            — Cruel and Unusual Punishment.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-dueprocess">
+          Due Process.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-enhancedpunishment">
+          Enhanced Punishment.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-legislativeintent">
+          Legislative Intent.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-procedure">
+          Procedure.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c19s12-19-21-notestodecisions-resentencinguponremand">
+          Resentencing Upon Remand.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c19s12-19-21-notestodecisions-resentencinguponremand-proffer">
+            — Proffer.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c19s12-19-21-notestodecisions-constitutionality">
         <b>
@@ -32081,52 +32138,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-constitutionality">
-          Constitutionality.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t12c19s12-19-21-notestodecisions-constitutionality-cruelandunusualpunishment">
-            — Cruel and Unusual Punishment.
-           </a>
-          </li>
-         </ul>
-        </li>
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-dueprocess">
-          Due Process.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-enhancedpunishment">
-          Enhanced Punishment.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-legislativeintent">
-          Legislative Intent.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-procedure">
-          Procedure.
-         </a>
-        </li>
-        <li>
-         <a href="#t12c19s12-19-21-notestodecisions-resentencinguponremand">
-          Resentencing Upon Remand.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t12c19s12-19-21-notestodecisions-resentencinguponremand-proffer">
-            — Proffer.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t12c19s12-19-26-notestodecisions-alternativesentence">
@@ -39131,6 +39142,27 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c25s12-25-25-notestodecisions-evaluatingappropriatefee">
+          Evaluating Appropriate Fee.
+         </a>
+        </li>
+        <li>
+         <a href="#t12c25s12-25-25-notestodecisions-rejectionofproposedfee">
+          Rejection of Proposed Fee.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c25s12-25-25-notestodecisions-rejectionofproposedfee-hearing">
+            — Hearing.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c25s12-25-25-notestodecisions-evaluatingappropriatefee">
         <b>
@@ -39437,25 +39469,6 @@
     </h2>
     <nav>
      <ul class="leaders">
-      <li>
-       <a href="#t12c25s12-25-25-notestodecisions-evaluatingappropriatefee">
-        Evaluating Appropriate Fee.
-       </a>
-      </li>
-      <li>
-       <a href="#t12c25s12-25-25-notestodecisions-rejectionofproposedfee">
-        Rejection of Proposed Fee.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c25s12-25-25-notestodecisions-rejectionofproposedfee-hearing">
-          — Hearing.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
-     <ul class="leaders">
       <li id="t12c25.1s12-25.1-1-snav01">
        <a href="#t12c25.1s12-25.1-1">
         12-25.1-1.  Short title.
@@ -39553,6 +39566,22 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t12c25.1s12-25.1-1-notestodecisions-constitutionality">
+          Constitutionality.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t12c25.1s12-25.1-1-notestodecisions-constitutionality-severability">
+            — Severability.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t12c25.1s12-25.1-1-notestodecisions-constitutionality">
         <b>
@@ -39688,20 +39717,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t12c25.1s12-25.1-1-notestodecisions-constitutionality">
-          Constitutionality.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t12c25.1s12-25.1-1-notestodecisions-constitutionality-severability">
-            — Severability.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t12c25.1s12-25.1-2-notestodecisions-constitutionality">
