--- a/transforms/ri/ocri/r70/gov.ri.code.title.15.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.15.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t15">
     <b>
      Title 15 Domestic Relations
@@ -873,13 +876,7 @@
          40-8
         </a>
        </cite>
-       to
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40c08" target="_blank">
-         40-8
-        </a>
-       </cite>
-       .10 inclusive, due to the provisions of 1 U.S.C. § 7 or any other federal non-recognition of spouses of the same sex.
+       to 40-8.10 inclusive, due to the provisions of 1 U.S.C. § 7 or any other federal non-recognition of spouses of the same sex.
       </li>
      </ol>
      <div>
@@ -2103,7 +2100,13 @@
        </ol>
       </li>
       <li id="t15c03s15-3-6.1ol1d">
-       Nothing in the marriage laws of this state shall be deemed or construed to limit the protections and exemptions provided to religious organizations under §§ 28-5-6(8)(ii) and 34-37-4.2(a).
+       Nothing in the marriage laws of this state shall be deemed or construed to limit the protections and exemptions provided to religious organizations under §§ 28-5-6(8)(ii) and
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.34.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t34c37s34-37-4.2ol1a" target="_blank">
+         34-37-4.2(a)
+        </a>
+       </cite>
+       .
       </li>
       <li id="t15c03s15-3-6.1ol1e">
        A fraternal benefit or service organization that is operated, supervised, or controlled by a religious organization and a fraternal benefit or service organization that has among its stated purposes the promotion, support, or protection of a religious organization and that restricts its membership to practicing members of that religious organization shall not be required to admit any individual as a member or to provide benefits to any individual. A refusal by a fraternal benefit or service organization by a member, officer, or employee thereof acting in an official capacity on behalf of a society described herein, to admit an individual as a member or to provide benefits related to a marriage that is in violation of the religious doctrine or teachings of the religious organization to which its members are required to adhere, shall not create a civil claim or result in any government action to penalize; withhold benefits from the fraternal benefit or service organization; or discriminate against a society, or a member, officer, or employee described herein.
@@ -5660,6 +5663,81 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-condonationofoffense">
+          Condonation of Offense.
+         </a>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-continueddrunkenness">
+          Continued Drunkenness.
+         </a>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-extremecruelty">
+          Extreme Cruelty.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c05s15-5-2-notestodecisions-extremecruelty-sufficiencyofevidence">
+            — Sufficiency of Evidence.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-grossmisbehaviorandwickedness">
+          Gross Misbehavior and Wickedness.
+         </a>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-neglectandrefusaltoprovide">
+          Neglect and Refusal to Provide.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c05s15-5-2-notestodecisions-neglectandrefusaltoprovide-abilitytoprovide">
+            — Ability to Provide.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-petitionerguiltyofoffensemeritingdivorce">
+          Petitioner Guilty of Offense Meriting Divorce.
+         </a>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-pleading">
+          Pleading.
+         </a>
+        </li>
+        <li>
+         <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion">
+          Willful Desertion.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-consenttoseparation">
+            — Consent to Separation.
+           </a>
+          </li>
+          <li>
+           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-periodoflessthanfiveyears">
+            — Period of Less Than Five Years.
+           </a>
+          </li>
+          <li>
+           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-reconciliation">
+            — Reconciliation.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t15c05s15-5-2-notestodecisions-condonationofoffense">
         <b>
@@ -6579,79 +6657,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-condonationofoffense">
-          Condonation of Offense.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-continueddrunkenness">
-          Continued Drunkenness.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-extremecruelty">
-          Extreme Cruelty.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t15c05s15-5-2-notestodecisions-extremecruelty-sufficiencyofevidence">
-            — Sufficiency of Evidence.
-           </a>
-          </li>
-         </ul>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-grossmisbehaviorandwickedness">
-          Gross Misbehavior and Wickedness.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-neglectandrefusaltoprovide">
-          Neglect and Refusal to Provide.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t15c05s15-5-2-notestodecisions-neglectandrefusaltoprovide-abilitytoprovide">
-            — Ability to Provide.
-           </a>
-          </li>
-         </ul>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-petitionerguiltyofoffensemeritingdivorce">
-          Petitioner Guilty of Offense Meriting Divorce.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-pleading">
-          Pleading.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion">
-          Willful Desertion.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-consenttoseparation">
-            — Consent to Separation.
-           </a>
-          </li>
-          <li>
-           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-periodoflessthanfiveyears">
-            — Period of Less Than Five Years.
-           </a>
-          </li>
-          <li>
-           <a href="#t15c05s15-5-2-notestodecisions-willfuldesertion-reconciliation">
-            — Reconciliation.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t15c05s15-5-3-notestodecisions-constitutionality">
@@ -15782,11 +15787,11 @@
       <li id="t15c05s15-5-16.7ol1b">
        Every three (3) years from the date the child support order was established or modified, and upon the request of either party, or upon the request of the state pursuant to §
        <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.15.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t15c05s15-5-16.2ol1c" target="_self">
-         15-5-16.2(c)
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.15.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t15c05s15-5-16.2ol1c3" target="_self">
+         15-5-16.2(c)(3)
         </a>
        </cite>
-       (3), the court shall review and, if appropriate, adjust the order in accordance with the child support guidelines if the amount of the child support award under the order differs from the amount that would be awarded in accordance with the guidelines. The adjustment of the order shall be made under this subsection without a requirement for proof or showing of a change in circumstances. In adjusting the order, incarceration may not be treated as voluntary unemployment that would prevent the motion from being heard or result in a denial of the motion. The periodic review of child support orders as provided in this subsection is in addition to the opportunity for review provided in §
+       , the court shall review and, if appropriate, adjust the order in accordance with the child support guidelines if the amount of the child support award under the order differs from the amount that would be awarded in accordance with the guidelines. The adjustment of the order shall be made under this subsection without a requirement for proof or showing of a change in circumstances. In adjusting the order, incarceration may not be treated as voluntary unemployment that would prevent the motion from being heard or result in a denial of the motion. The periodic review of child support orders as provided in this subsection is in addition to the opportunity for review provided in §
        <cite class="ocri">
         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.15.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t15c05s15-5-16.2ol1c" target="_self">
          15-5-16.2(c)
@@ -17618,6 +17623,22 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t15c05s15-5-24-notestodecisions-wageassignmentorder">
+          Wage-Assignment Order.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c05s15-5-24-notestodecisions-wageassignmentorder-constitutionality">
+            — Constitutionality.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t15c05s15-5-24-notestodecisions-wageassignmentorder">
         <b>
@@ -17702,20 +17723,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t15c05s15-5-24-notestodecisions-wageassignmentorder">
-          Wage-Assignment Order.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t15c05s15-5-24-notestodecisions-wageassignmentorder-constitutionality">
-            — Constitutionality.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t15c05s15-5-24.1-notestodecisions-adoption">
@@ -31285,6 +31292,39 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t15c10s15-10-1-notestodecisions-agreementtosupport">
+          Agreement to Support.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c10s15-10-1-notestodecisions-agreementtosupport-considerationforconveyance">
+            — Consideration for Conveyance.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal">
+          Standing to Appeal.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal-appointmentofguardian">
+            — Appointment of Guardian.
+           </a>
+          </li>
+          <li>
+           <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal-denialofremovalofguardian">
+            — Denial of Removal of Guardian.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t15c10s15-10-1-notestodecisions-agreementtosupport">
         <b>
@@ -31613,37 +31653,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t15c10s15-10-1-notestodecisions-agreementtosupport">
-        Agreement to Support.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t15c10s15-10-1-notestodecisions-agreementtosupport-considerationforconveyance">
-          — Consideration for Conveyance.
-         </a>
-        </li>
-       </ul>
-      </li>
-      <li>
-       <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal">
-        Standing to Appeal.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal-appointmentofguardian">
-          — Appointment of Guardian.
-         </a>
-        </li>
-        <li>
-         <a href="#t15c10s15-10-1-notestodecisions-standingtoappeal-denialofremovalofguardian">
-          — Denial of Removal of Guardian.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t15c11s15-11-1-snav01">
        <a href="#t15c11s15-11-1">
@@ -33547,6 +33556,22 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t15c14.1s15-14.1-2-notestodecisions-homestate">
+          Home State.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t15c14.1s15-14.1-2-notestodecisions-homestate-timeperiod">
+            — Time Period.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t15c14.1s15-14.1-2-notestodecisions-homestate">
         <b>
@@ -33950,20 +33975,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t15c14.1s15-14.1-2-notestodecisions-homestate">
-          Home State.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t15c14.1s15-14.1-2-notestodecisions-homestate-timeperiod">
-            — Time Period.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t15c14.1s15-14.1-13-notestodecisions-acquiringjurisdiction">
@@ -39604,7 +39615,13 @@
        The notice of intent as filed shall be deemed and operate as a lien which is perfected by the department by the filing of a notice of lien. The notice of lien shall specify the property to be attached and the amount of the arrearage due and shall be filed in the office or city or town where the notice of intent was originally filed.
       </li>
       <li id="t15c21s15-21-4ol1e">
-       The lien shall have priority over all subsequent liens or other encumbrances, subject to the provisions of § 6A-9-322 and with the exception of any lien for taxes. A child support lien that has been perfected shall encumber after acquired personal property or proceeds.
+       The lien shall have priority over all subsequent liens or other encumbrances, subject to the provisions of §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac09p03sp3s6A-9-322" target="_blank">
+         6A-9-322
+        </a>
+       </cite>
+       and with the exception of any lien for taxes. A child support lien that has been perfected shall encumber after acquired personal property or proceeds.
       </li>
       <li id="t15c21s15-21-4ol1f">
        If the collection of any unpaid child support will be jeopardized by delay or exigent circumstances, as defined by rules promulgated by the director, the department may apply to the family court for an order to restrain the obligor parent from encumbering, moving, selling, or in any way transferring any real or personal property which may be subject to the provisions of this section.
