--- a/transforms/ri/ocri/r70/gov.ri.code.title.16.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.16.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t16">
     <b>
      Title 16 Education
@@ -20732,7 +20735,31 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1909, ch. 63, §§ 9, 17, and 18; P.L. 1912, ch. 839, § 1; G.L. 1923, ch. 84, §§ 8-10; G.L. 1923, ch. 65, § 18; P.L. 1932, ch. 1950, § 1; P.L. 1935, ch. 2250, § 149; G.L. 1923, ch. 84, §§ 14-16; P.L. 1938, ch. 2575, § 1; G.L. 1938, ch. 176, §§ 8-11, 15-17; G.L. 1938, ch. 176, § 18; P.L. 1943, ch. 1354, § 1; P.L. 1952, ch. 3040, § 1; P.L. 1954, ch. 3368, § 3; G.L. 1956, §§ 16-14-1 — 16-14-6; P.L. 1957, ch. 69, § 1; Repealed by P.L. 1977, ch. 238, § 6; P.L. 1980, ch. 395, § 1.
+       G.L. 1909, ch. 63, §§ 9, 17, and 18; P.L. 1912, ch. 839, § 1; G.L. 1923, ch. 84, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.08.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t08c10" target="_blank">
+         8-10
+        </a>
+       </cite>
+       ; G.L. 1923, ch. 65, § 18; P.L. 1932, ch. 1950, § 1; P.L. 1935, ch. 2250, § 149; G.L. 1923, ch. 84, §§ 14-16; P.L. 1938, ch. 2575, § 1; G.L. 1938, ch. 176, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.08.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t08c11" target="_blank">
+         8-11
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.15.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t15c17" target="_blank">
+         15-17
+        </a>
+       </cite>
+       ; G.L. 1938, ch. 176, § 18; P.L. 1943, ch. 1354, § 1; P.L. 1952, ch. 3040, § 1; P.L. 1954, ch. 3368, § 3; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c14s16-14-1" target="_self">
+         16-14-1
+        </a>
+       </cite>
+       — 16-14-6; P.L. 1957, ch. 69, § 1; Repealed by P.L. 1977, ch. 238, § 6; P.L. 1980, ch. 395, § 1.
       </p>
      </div>
      <div>
@@ -22229,7 +22256,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1948, ch. 2101, § 3; P.L. 1951, ch. 2830, § 6; G.L. 1956, §§ 16-16-9, 16-16-10; P.L. 1961, ch. 121, § 1; Repealed by P.L. 1992, ch. 306, art. II, § 2, effective January 1, 1993.
+       P.L. 1948, ch. 2101, § 3; P.L. 1951, ch. 2830, § 6; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c16s16-16-9" target="_self">
+         16-16-9
+        </a>
+       </cite>
+       , 16-16-10; P.L. 1961, ch. 121, § 1; Repealed by P.L. 1992, ch. 306, art. II, § 2, effective January 1, 1993.
       </p>
      </div>
      <div>
@@ -22239,7 +22272,13 @@
        </b>
       </h4>
       <p>
-       Former §§ 16-16-9 and 16-16-10 concerned credit for service prior to 1949 and filing of prior service.
+       Former §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c16s16-16-9" target="_self">
+         16-16-9
+        </a>
+       </cite>
+       and 16-16-10 concerned credit for service prior to 1949 and filing of prior service.
       </p>
      </div>
     </div>
@@ -32346,11 +32385,11 @@
         <li id="t16c22s16-22-24ol1a1">
          Dating violence education shall include, but not be limited to: defining dating violence; recognizing dating violence warning signs; and characteristics of healthy relationships. Additionally, students shall be provided with the school district’s dating violence policy as provided in §
          <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c21" target="_self">
-           16-21
+          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c21s16-21-30ol1c" target="_self">
+           16-21-30(c)
           </a>
          </cite>
-         -30(c).
+         .
         </li>
         <li id="t16c22s16-22-24ol1a2">
          For the purposes of this section:
@@ -37878,7 +37917,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1935; ch. 2250, § 84; G.L. 1938, ch. 188, § 1; impl. am. P.L. 1939, ch. 660, § 65; P.L. 1939, ch. 688, §§ 1-11; P.L. 1951, ch. 2752, § 20; P.L. 1951, ch. 2686, § 2; P.L. 1951, ch. 2727, art. 1, § 3; impl. am. P.L. 1951, ch. 2752, § 20; P.L. 1956, ch. 3696, §§ 1, 2; G.L. 1956, § 16-31-1 — 16-31-15; impl. am. P.L. 1959, ch. 44, § 3; P.L. 1966, ch. 132, § 1; P.L. 1967, ch. 152, § 1; P.L. 1968, ch. 37, § 1; P.L. 1968, ch. 181, §§ 1, 2; P.L. 1979, ch. 174, art. VIII, § 1; Repealed by P.L. 1988, ch. 84, §§ 52 and 121, effective May 27, 1988.
+       P.L. 1935; ch. 2250, § 84; G.L. 1938, ch. 188, § 1; impl. am. P.L. 1939, ch. 660, § 65; P.L. 1939, ch. 688, §§ 1-11; P.L. 1951, ch. 2752, § 20; P.L. 1951, ch. 2686, § 2; P.L. 1951, ch. 2727, art. 1, § 3; impl. am. P.L. 1951, ch. 2752, § 20; P.L. 1956, ch. 3696, §§ 1, 2; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c31s16-31-1" target="_self">
+         16-31-1
+        </a>
+       </cite>
+       — 16-31-15; impl. am. P.L. 1959, ch. 44, § 3; P.L. 1966, ch. 132, § 1; P.L. 1967, ch. 152, § 1; P.L. 1968, ch. 37, § 1; P.L. 1968, ch. 181, §§ 1, 2; P.L. 1979, ch. 174, art. VIII, § 1; Repealed by P.L. 1988, ch. 84, §§ 52 and 121, effective May 27, 1988.
       </p>
      </div>
      <div>
@@ -45097,7 +45142,13 @@
        </b>
       </h4>
       <p>
-       Former §§ 16-42-4 — 16-42-11 concerned education of gifted children.
+       Former §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c42s16-42-4" target="_self">
+         16-42-4
+        </a>
+       </cite>
+       — 16-42-11 concerned education of gifted children.
       </p>
      </div>
     </div>
@@ -47467,47 +47518,11 @@
       <p>
        G.L. 1956, §§
        <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49s16-49-1" target="_self">
+         16-49-1
         </a>
        </cite>
-       -1,
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -3 —
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -9,
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -13 —
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -20; P.L. 1969, ch. 231, §§ 3, 12, 13, 15; P.L. 1970, ch. 298, § 1; P.L. 1971, ch. 13, § 1; P.L. 1956, §§
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -2 —
-       <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
-         16-49
-        </a>
-       </cite>
-       -17; P.L. 1973, ch. 249, § 1; P.L. 1974, ch. 223, § 1; P.L. 1975, ch. 253, § 1; P.L. 1976, ch. 130, §§ 7, 8; P.L. 1976, ch. 198, art. 1, § 13; P.L. 1977, ch. 118, § 1; P.L. 1977, ch. 262, § 1; P.L. 1978, ch. 205, art. 5, § 1; P.L. 1978, ch. 372, § 1; P.L. 1979, ch. 174, art. 9, § 1; P.L. 1979, ch. 390, § 1; P.L. 1980, ch. 146, § 1; Repealed by P.L. 1981, ch. 32, § 14. For the effective date of the repeal, see § 14 of P.L. 1981, ch. 32, which provides in part: “effective with the filing of certified copies of the order or orders of reorganization by the board of governors for higher education and the board of regents for elementary and secondary education in the office of the secretary of state, ch.
+       , 16-49-3 — 16-49-9, 16-49-13 — 16-49-20; P.L. 1969, ch. 231, §§ 3, 12, 13, 15; P.L. 1970, ch. 298, § 1; P.L. 1971, ch. 13, § 1; P.L. 1956, §§ 16-49-2 — 16-49-17; P.L. 1973, ch. 249, § 1; P.L. 1974, ch. 223, § 1; P.L. 1975, ch. 253, § 1; P.L. 1976, ch. 130, §§ 7, 8; P.L. 1976, ch. 198, art. 1, § 13; P.L. 1977, ch. 118, § 1; P.L. 1977, ch. 262, § 1; P.L. 1978, ch. 205, art. 5, § 1; P.L. 1978, ch. 372, § 1; P.L. 1979, ch. 174, art. 9, § 1; P.L. 1979, ch. 390, § 1; P.L. 1980, ch. 146, § 1; Repealed by P.L. 1981, ch. 32, § 14. For the effective date of the repeal, see § 14 of P.L. 1981, ch. 32, which provides in part: “effective with the filing of certified copies of the order or orders of reorganization by the board of governors for higher education and the board of regents for elementary and secondary education in the office of the secretary of state, ch.
        <cite class="ocri">
         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49" target="_self">
          16-49
@@ -47562,7 +47577,13 @@
       Transferred Sections.
      </p>
      <p>
-      These sections (G.L. 1956, §§ 16-49-18, 16-49-19, 16-49-20; P.L. 1969, ch. 231, §§ 12, 13, 15) were transferred to §§ 16-49-15, 16-49-16, 16-49-17 by the 1973 amendment.
+      These sections (G.L. 1956, §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c49s16-49-18" target="_self">
+        16-49-18
+       </a>
+      </cite>
+      , 16-49-19, 16-49-20; P.L. 1969, ch. 231, §§ 12, 13, 15) were transferred to §§ 16-49-15, 16-49-16, 16-49-17 by the 1973 amendment.
      </p>
     </div>
    </div>
@@ -52632,7 +52653,13 @@
       </b>
      </h3>
      <p>
-      The provisions of repealed §§ 16-31-8, 16-31-9, 16-31-10, 16-31-11, and 16-31-13 previously pertinent to the board of trustees of state colleges and made applicable to the board of governors for education are made applicable to the board of governors for higher education; provided, that § 16-59-23 shall not apply to members of the general assembly in their capacity as members of the board of governors.
+      The provisions of repealed §§ 16-31-8, 16-31-9, 16-31-10, 16-31-11, and 16-31-13 previously pertinent to the board of trustees of state colleges and made applicable to the board of governors for education are made applicable to the board of governors for higher education; provided, that §
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c59s16-59-23" target="_self">
+        16-59-23
+       </a>
+      </cite>
+      shall not apply to members of the general assembly in their capacity as members of the board of governors.
      </p>
      <div>
       <h4 id="t16c59s16-59-14-historyofsection">
@@ -60259,31 +60286,7 @@
         16-77
        </a>
       </cite>
-      ,
-      <cite class="ocri">
-       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c77" target="_self">
-        16-77
-       </a>
-      </cite>
-      .1,
-      <cite class="ocri">
-       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c77" target="_self">
-        16-77
-       </a>
-      </cite>
-      .2,
-      <cite class="ocri">
-       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c77" target="_self">
-        16-77
-       </a>
-      </cite>
-      .3, and
-      <cite class="ocri">
-       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c77" target="_self">
-        16-77
-       </a>
-      </cite>
-      .4 of the general laws shall be known and may be cited collectively as the “Charter Public School Act of Rhode Island” or as the “Act”.
+      , 16-77.1, 16-77.2, 16-77.3, and 16-77.4 of the general laws shall be known and may be cited collectively as the “Charter Public School Act of Rhode Island” or as the “Act”.
      </p>
      <div>
       <h4 id="t16c77s16-77-1-historyofsection">
