--- a/transforms/ri/ocri/r70/gov.ri.code.title.18.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.18.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t18">
     <b>
      Title 18 Fiduciaries
@@ -8043,7 +8046,13 @@
       </b>
      </h3>
      <p>
-      A qualified disposition shall be subject to § 18-9.2-4 of this chapter notwithstanding a transferor’s retention of any or all of the powers and rights described in subdivision 18-9.2-2(10)(ii) and the transferor’s service as investment advisor pursuant to subdivision 18-9.2-2(9)(iv). The transferor shall have only such powers and rights as are conferred by the trust instrument. Except as permitted by subdivisions 18-9.2-2(9)(iv) and 18-9.2-2(10)(ii), a transferor shall have no rights or authority with respect to the property that is the subject of a qualified disposition or the income therefrom, and any agreement or understanding purporting to grant or permit the retention of any greater rights or authority shall be void.
+      A qualified disposition shall be subject to §
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c9.2s18-9.2-4" target="_self">
+        18-9.2-4
+       </a>
+      </cite>
+      of this chapter notwithstanding a transferor’s retention of any or all of the powers and rights described in subdivision 18-9.2-2(10)(ii) and the transferor’s service as investment advisor pursuant to subdivision 18-9.2-2(9)(iv). The transferor shall have only such powers and rights as are conferred by the trust instrument. Except as permitted by subdivisions 18-9.2-2(9)(iv) and 18-9.2-2(10)(ii), a transferor shall have no rights or authority with respect to the property that is the subject of a qualified disposition or the income therefrom, and any agreement or understanding purporting to grant or permit the retention of any greater rights or authority shall be void.
      </p>
      <div>
       <h4 id="t18c9.2s18-9.2-3-historyofsection">
@@ -8092,10 +8101,28 @@
        </ol>
       </li>
       <li id="t18c9.2s18-9.2-4ol1c">
-       For purposes of this chapter, a qualified disposition that is made by means of a disposition by a transferor who is a trustee shall be deemed to have been made as of the time the property that is the subject of the qualified disposition was originally transferred to the transferor (or any predecessor trustee) making the qualified disposition in a form that meets the requirements of subdivisions 18-9.2-2(10)(ii) and (iii). If a trustee of an existing trust proposes to make a qualified disposition pursuant to the provisions of this subsection (c) of this section but the trust would not conform to the requirements of subparagraph 18-9.2-2(10)(ii)(B) as a result of the original transferor’s nonconforming powers of appointment, then, upon the trustee’s delivery to the qualified trustee of an irrevocable written election to have this subsection apply to the trust, the nonconforming powers of appointment shall be deemed modified to the extent necessary to conform with subparagraph 18-9.2-2(10)(ii)(B). For purposes of this chapter, the irrevocable written election shall include a description of the original transferor’s powers of appointment as modified together with the original transferor’s written consent thereto, but no such consent of the original transferor shall be considered a disposition within the meaning of subsection 18-9.2-2(4).
+       For purposes of this chapter, a qualified disposition that is made by means of a disposition by a transferor who is a trustee shall be deemed to have been made as of the time the property that is the subject of the qualified disposition was originally transferred to the transferor (or any predecessor trustee) making the qualified disposition in a form that meets the requirements of subdivisions 18-9.2-2(10)(ii) and (iii). If a trustee of an existing trust proposes to make a qualified disposition pursuant to the provisions of this subsection (c) of this section but the trust would not conform to the requirements of subparagraph 18-9.2-2(10)(ii)(B) as a result of the original transferor’s nonconforming powers of appointment, then, upon the trustee’s delivery to the qualified trustee of an irrevocable written election to have this subsection apply to the trust, the nonconforming powers of appointment shall be deemed modified to the extent necessary to conform with subparagraph 18-9.2-2(10)(ii)(B). For purposes of this chapter, the irrevocable written election shall include a description of the original transferor’s powers of appointment as modified together with the original transferor’s written consent thereto, but no such consent of the original transferor shall be considered a disposition within the meaning of subsection
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c9.2s18-9.2-2ol14" target="_self">
+         18-9.2-2(4)
+        </a>
+       </cite>
+       .
       </li>
       <li id="t18c9.2s18-9.2-4ol1d">
-       Notwithstanding any law to the contrary, a creditor, including a creditor whose claim arose before or after a qualified disposition, or any other person shall have only such rights with respect to a qualified disposition as are provided in this section and §§ 18-9.2-5 and 18-9.2-6, and no such creditor nor any other person shall have any claim or cause of action against the trustee, or advisor described in subdivision 18-9.2-2(9)(iii), of a trust that is the subject of a qualified disposition, or against any person involved in the counseling, drafting, preparation, execution or funding of a trust that is the subject of a qualified disposition.
+       Notwithstanding any law to the contrary, a creditor, including a creditor whose claim arose before or after a qualified disposition, or any other person shall have only such rights with respect to a qualified disposition as are provided in this section and §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c9.2s18-9.2-5" target="_self">
+         18-9.2-5
+        </a>
+       </cite>
+       and
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c9.2s18-9.2-6" target="_self">
+         18-9.2-6
+        </a>
+       </cite>
+       , and no such creditor nor any other person shall have any claim or cause of action against the trustee, or advisor described in subdivision 18-9.2-2(9)(iii), of a trust that is the subject of a qualified disposition, or against any person involved in the counseling, drafting, preparation, execution or funding of a trust that is the subject of a qualified disposition.
       </li>
       <li id="t18c9.2s18-9.2-4ol1e">
        Notwithstanding any other provision of law, no action of any kind, including, without limitation, an action to enforce a judgment by a court or other body having adjudicative authority, shall be brought at law or in equity against the trustee, or advisor described in subdivision 18-9.2-2(9)(iii), of a trust that is the subject of the qualified disposition, or against any person involved in the counseling, drafting, preparation, execution or funding of a trust that is the subject of a qualified disposition, if, as of the date such action is brought, an action by a creditor with respect to such qualified disposition would be barred under this section.
@@ -11486,17 +11513,16 @@
         </cite>
         entitled “Rhode Island Short Form Power of Attorney Act.” §§
         <cite class="ocri">
-         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c16" target="_self">
-          18-16
+         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c16s18-16-1" target="_self">
+          18-16-1
          </a>
         </cite>
-        -1
         <cite class="ocri">
-         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c16" target="_self">
-          18-16
+         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c16s18-16-12" target="_self">
+          18-16-12
          </a>
         </cite>
-        -12 The use of the short form power of attorney is strictly voluntary, and chapter
+        The use of the short form power of attorney is strictly voluntary, and chapter
         <cite class="ocri">
          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.18.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t18c16" target="_self">
           18-16
