--- a/transforms/ri/ocri/r70/gov.ri.code.title.20.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.20.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t20">
     <b>
      Title 20 Fish and Wildlife
@@ -11436,7 +11439,37 @@
        </b>
       </h4>
       <p>
-       Former chapter 9 of this title (P.L. 1912, ch. 852, §§ 1-13, 15, 16; P.L. 1913, ch. 923, § 1; P.L. 1913, ch. 942, § 1; G.L. 1923, ch. 229, §§ 1-13, 15, 16, 18-22; P.L. 1926, ch. 851, § 1; P.L. 1931, ch. 1722, § 1; P.L. 1932, ch. 1935, § 1; P.L. 1933, ch. 2040, § 1; P.L. 1934, ch. 2122, § 1; G.L. 1938, ch. 232, §§ 1-22, 26; P.L. 1944, ch. 1416, § 1; P.L. 1947, ch. 1938, § 1; P.L. 1953, ch. 3134, § 1; P.L. 1954, ch. 3306, § 1; P.L. 1956, ch. 3813, § 1; P.L. 1956, ch. 3833, § 1; P.L. 1956, ch. 3834, § 1; G.L. 1956, §§ 20-9-1 — 20-9-27; P.L. 1958, ch. 42, § 1; P.L. 1958, ch. 152, § 1; P.L. 1958, ch. 209, § 1; P.L. 1959, ch. 87, § 1; P.L. 1960, ch. 99, § 1; P.L. 1960, ch. 159, § 1; P.L. 1961, ch. 27, § 1; P.L. 1962, ch. 56, § 1; P.L. 1964, ch. 69, §§ 1-6; P.L. 1966, ch. 225, § 1; P.L. 1967, ch. 175, § 1; P.L. 1979, ch. 196, § 3; P.L. 1979, ch. 345, § 1), consisting of §§ 20-9-1 — 20-9-27 and concerning free and common shellfisheries, was repealed in part by P.L. 1979, ch. 196, § 4, and repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-6-1 et seq. and § 20-8.1-1 et seq.
+       Former chapter 9 of this title (P.L. 1912, ch. 852, §§ 1-13, 15, 16; P.L. 1913, ch. 923, § 1; P.L. 1913, ch. 942, § 1; G.L. 1923, ch. 229, §§ 1-13, 15, 16, 18-22; P.L. 1926, ch. 851, § 1; P.L. 1931, ch. 1722, § 1; P.L. 1932, ch. 1935, § 1; P.L. 1933, ch. 2040, § 1; P.L. 1934, ch. 2122, § 1; G.L. 1938, ch. 232, §§ 1-22, 26; P.L. 1944, ch. 1416, § 1; P.L. 1947, ch. 1938, § 1; P.L. 1953, ch. 3134, § 1; P.L. 1954, ch. 3306, § 1; P.L. 1956, ch. 3813, § 1; P.L. 1956, ch. 3833, § 1; P.L. 1956, ch. 3834, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c09s20-9-1" target="_self">
+         20-9-1
+        </a>
+       </cite>
+       — 20-9-27; P.L. 1958, ch. 42, § 1; P.L. 1958, ch. 152, § 1; P.L. 1958, ch. 209, § 1; P.L. 1959, ch. 87, § 1; P.L. 1960, ch. 99, § 1; P.L. 1960, ch. 159, § 1; P.L. 1961, ch. 27, § 1; P.L. 1962, ch. 56, § 1; P.L. 1964, ch. 69, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c06" target="_blank">
+         1-6
+        </a>
+       </cite>
+       ; P.L. 1966, ch. 225, § 1; P.L. 1967, ch. 175, § 1; P.L. 1979, ch. 196, § 3; P.L. 1979, ch. 345, § 1), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c09s20-9-1" target="_self">
+         20-9-1
+        </a>
+       </cite>
+       — 20-9-27 and concerning free and common shellfisheries, was repealed in part by P.L. 1979, ch. 196, § 4, and repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c06s20-6-1" target="_self">
+         20-6-1
+        </a>
+       </cite>
+       et seq. and §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c8.1s20-8.1-1" target="_self">
+         20-8.1-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
@@ -12511,7 +12544,55 @@
        </b>
       </h4>
       <p>
-       Former chapter 11 of this title (P.L. 1906, ch. 1369, §§ 1, 2; P.L. 1908, ch. 1570, § 1; G.L. 1909, ch. 205, §§ 1-3; P.L. 1915, ch. 1243, § 1; G.L. 1923, ch. 232, §§ 1-3; P.L. 1927, ch. 989, § 1; P.L. 1935, ch. 2215, § 1; G.L. 1938, ch. 232, §§ 24, 25; G.L. 1938, ch. 236, §§ 1-12; P.L. 1944, ch. 1496, §§ 1-3; P.L. 1947, ch. 1936, § 1; P.L. 1949, ch. 2353, § 1; P.L. 1951, ch. 2719, § 1; P.L. 1952, ch. 3028, § 1; P.L. 1954, ch. 3307, §§ 1, 2; P.L. 1954, ch. 3380, § 1; P.L. 1956, ch. 3818, §§ 1-3; G.L. 1956, §§ 20-11-1 — 20-11-19; P.L. 1961, ch. 168, § 1; P.L. 1964, ch. 122, § 1; P.L. 1965, ch. 104, § 1; P.L. 1977, ch. 166, §§ 1, 3; P.L. 1979, ch. 196, § 5), consisting of §§ 20-11-1 — 20-11-19 and concerning quahaugs and clams, was repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-6-1 et seq. and § 20-8.1-1 et seq.
+       Former chapter 11 of this title (P.L. 1906, ch. 1369, §§ 1, 2; P.L. 1908, ch. 1570, § 1; G.L. 1909, ch. 205, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c03" target="_blank">
+         1-3
+        </a>
+       </cite>
+       ; P.L. 1915, ch. 1243, § 1; G.L. 1923, ch. 232, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c03" target="_blank">
+         1-3
+        </a>
+       </cite>
+       ; P.L. 1927, ch. 989, § 1; P.L. 1935, ch. 2215, § 1; G.L. 1938, ch. 232, §§ 24, 25; G.L. 1938, ch. 236, §§ 1-12; P.L. 1944, ch. 1496, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c03" target="_blank">
+         1-3
+        </a>
+       </cite>
+       ; P.L. 1947, ch. 1936, § 1; P.L. 1949, ch. 2353, § 1; P.L. 1951, ch. 2719, § 1; P.L. 1952, ch. 3028, § 1; P.L. 1954, ch. 3307, §§ 1, 2; P.L. 1954, ch. 3380, § 1; P.L. 1956, ch. 3818, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c03" target="_blank">
+         1-3
+        </a>
+       </cite>
+       ; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c11s20-11-1" target="_self">
+         20-11-1
+        </a>
+       </cite>
+       — 20-11-19; P.L. 1961, ch. 168, § 1; P.L. 1964, ch. 122, § 1; P.L. 1965, ch. 104, § 1; P.L. 1977, ch. 166, §§ 1, 3; P.L. 1979, ch. 196, § 5), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c11s20-11-1" target="_self">
+         20-11-1
+        </a>
+       </cite>
+       — 20-11-19 and concerning quahaugs and clams, was repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c06s20-6-1" target="_self">
+         20-6-1
+        </a>
+       </cite>
+       et seq. and §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c8.1s20-8.1-1" target="_self">
+         20-8.1-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
@@ -13173,7 +13254,55 @@
        </b>
       </h4>
       <p>
-       Former chapter 13 of this title (P.L. 1901, ch. 833, §§ 1, 3-12; P.L. 1902, ch. 957, § 1; C.P.A. 1905, § 1216; G.L. 1909, ch. 209, §§ 1, 3-12; P.L. 1909, ch. 393, §§ 1-3; P.L. 1920, ch. 1880, §§ 2, 3; G.L. 1923, ch. 237, §§ 1, 3-12; P.L. 1927, ch. 1045, § 1; P.L. 1935, ch. 2250, § 104; G.L. 1938, ch. 239, §§ 1-17; P.L. 1941, ch. 1020, § 1; P.L. 1946, ch. 1720, § 1; P.L. 1949, ch. 2356, §§ 1, 2; P.L. 1953, ch. 3131, § 1; P.L. 1954, ch. 3354, § 1; G.L. 1956, §§ 20-13-1 — 20-13-18; P.L. 1959, ch. 4, § 1; P.L. 1965, ch. 196, § 1; P.L. 1969, ch. 239, § 54; P.L. 1979, ch. 196, § 7), consisting of §§ 20-13-1 — 20-13-18 and concerning scallops, was repealed in part by P.L. 1979, ch. 196, § 8, and by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-6-1 et seq. and § 20-18.1-1 et seq.
+       Former chapter 13 of this title (P.L. 1901, ch. 833, §§ 1,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.03.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t03c12" target="_blank">
+         3-12
+        </a>
+       </cite>
+       ; P.L. 1902, ch. 957, § 1; C.P.A. 1905, § 1216; G.L. 1909, ch. 209, §§ 1,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.03.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t03c12" target="_blank">
+         3-12
+        </a>
+       </cite>
+       ; P.L. 1909, ch. 393, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c03" target="_blank">
+         1-3
+        </a>
+       </cite>
+       ; P.L. 1920, ch. 1880, §§ 2, 3; G.L. 1923, ch. 237, §§ 1,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.03.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t03c12" target="_blank">
+         3-12
+        </a>
+       </cite>
+       ; P.L. 1927, ch. 1045, § 1; P.L. 1935, ch. 2250, § 104; G.L. 1938, ch. 239, §§ 1-17; P.L. 1941, ch. 1020, § 1; P.L. 1946, ch. 1720, § 1; P.L. 1949, ch. 2356, §§ 1, 2; P.L. 1953, ch. 3131, § 1; P.L. 1954, ch. 3354, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c13s20-13-1" target="_self">
+         20-13-1
+        </a>
+       </cite>
+       — 20-13-18; P.L. 1959, ch. 4, § 1; P.L. 1965, ch. 196, § 1; P.L. 1969, ch. 239, § 54; P.L. 1979, ch. 196, § 7), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c13s20-13-1" target="_self">
+         20-13-1
+        </a>
+       </cite>
+       — 20-13-18 and concerning scallops, was repealed in part by P.L. 1979, ch. 196, § 8, and by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c06s20-6-1" target="_self">
+         20-6-1
+        </a>
+       </cite>
+       et seq. and §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c18.1s20-18.1-1" target="_self">
+         20-18.1-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
@@ -15684,7 +15813,25 @@
        </b>
       </h4>
       <p>
-       Former chapter 18 of this title (P.L. 1928, ch. 1167, §§ 1-15, 17, 19; P.L. 1932, ch. 1890, §§ 1, 2, 4; P.L. 1932, ch. 1955, §§ 1, 2; G.L. 1938, ch. 241, §§ 1-16, 18; G.L. 1956, §§ 20-18-1 — 20-18-23; P.L. 1965, ch. 175, § 1; P.L. 1966, ch. 243, § 1), consisting of §§ 20-18-1 — 20-18-23 and concerning fish traps, was repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-5-1 et seq.
+       Former chapter 18 of this title (P.L. 1928, ch. 1167, §§ 1-15, 17, 19; P.L. 1932, ch. 1890, §§ 1, 2, 4; P.L. 1932, ch. 1955, §§ 1, 2; G.L. 1938, ch. 241, §§ 1-16, 18; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c18s20-18-1" target="_self">
+         20-18-1
+        </a>
+       </cite>
+       — 20-18-23; P.L. 1965, ch. 175, § 1; P.L. 1966, ch. 243, § 1), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c18s20-18-1" target="_self">
+         20-18-1
+        </a>
+       </cite>
+       — 20-18-23 and concerning fish traps, was repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c05s20-5-1" target="_self">
+         20-5-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
@@ -16487,7 +16634,25 @@
        </b>
       </h4>
       <p>
-       Former §§ 20-25-1 — 20-25-11 (P.L. 1917, ch. 1513, §§ 1, 2; G.L. 1923, ch. 138, §§ 7, 8; P.L. 1932, ch. 1883, § 1; G.L. 1938, ch. 252, §§ 1-9; P.L. 1939, ch. 736, §§ 1, 3; P.L. 1940, ch. 911, § 1; P.L. 1948, ch. 2156, § 3; G.L. 1956, §§ 20-25-1 — 20-25-11), concerning artificial progagation of game, were repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-17-1 et seq.
+       Former §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c25s20-25-1" target="_self">
+         20-25-1
+        </a>
+       </cite>
+       — 20-25-11 (P.L. 1917, ch. 1513, §§ 1, 2; G.L. 1923, ch. 138, §§ 7, 8; P.L. 1932, ch. 1883, § 1; G.L. 1938, ch. 252, §§ 1-9; P.L. 1939, ch. 736, §§ 1, 3; P.L. 1940, ch. 911, § 1; P.L. 1948, ch. 2156, § 3; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c25s20-25-1" target="_self">
+         20-25-1
+        </a>
+       </cite>
+       — 20-25-11), concerning artificial progagation of game, were repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c17s20-17-1" target="_self">
+         20-17-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
     </div>
@@ -16995,7 +17160,31 @@
        </b>
       </h4>
       <p>
-       Former §§ 20-32-1 — 20-32-23 (P.L. 1929, ch. 1424, §§ 1-6; P.L. 1930, ch. 1578, § 1; G.L. 1938, ch. 249, § 12; G.L. 1938, ch. 250, §§ 1-19; P.L. 1949, ch. 2258, § 1; P.L. 1949, ch. 2362, §§ 2, 3; P.L. 1953, ch. 3130, §§ 1, 2; P.L. 1953, ch. 3143, § 1; G.L. 1956, §§ 20-32-1 — 20-32-23; P.L. 1962, ch. 116, § 1; P.L. 1964, ch. 236, § 1; P.L. 1970, ch. 240, §§ 1, 2; P.L. 1972, ch. 259, §§ 1, 2; P.L. 1977, ch. 80, § 1), concerning fur-hide bearing animals, were repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see § 20-16-1 et seq.
+       Former §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c32s20-32-1" target="_self">
+         20-32-1
+        </a>
+       </cite>
+       — 20-32-23 (P.L. 1929, ch. 1424, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c06" target="_blank">
+         1-6
+        </a>
+       </cite>
+       ; P.L. 1930, ch. 1578, § 1; G.L. 1938, ch. 249, § 12; G.L. 1938, ch. 250, §§ 1-19; P.L. 1949, ch. 2258, § 1; P.L. 1949, ch. 2362, §§ 2, 3; P.L. 1953, ch. 3130, §§ 1, 2; P.L. 1953, ch. 3143, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c32s20-32-1" target="_self">
+         20-32-1
+        </a>
+       </cite>
+       — 20-32-23; P.L. 1962, ch. 116, § 1; P.L. 1964, ch. 236, § 1; P.L. 1970, ch. 240, §§ 1, 2; P.L. 1972, ch. 259, §§ 1, 2; P.L. 1977, ch. 80, § 1), concerning fur-hide bearing animals, were repealed by P.L. 1981, ch. 197, § 2, effective January 1, 1982. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.20.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t20c16s20-16-1" target="_self">
+         20-16-1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
     </div>
