--- a/transforms/ri/ocri/r70/gov.ri.code.title.21.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.21.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t21">
     <b>
      Title 21 Food and Drugs
@@ -2426,7 +2429,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1931, ch. 1777, § 17; G.L. 1938, ch. 217, § 16; G.L. 1956, § 21-2-18; G.L. 1956, § 21-2-52, P.L. 1962, ch. 80, § 1.
+       P.L. 1931, ch. 1777, § 17; G.L. 1938, ch. 217, § 16; G.L. 1956, § 21-2-18; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c02s21-2-52" target="_self">
+         21-2-52
+        </a>
+       </cite>
+       , P.L. 1962, ch. 80, § 1.
       </p>
      </div>
     </div>
@@ -3277,7 +3286,13 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1923, ch. 203, § 32; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 31; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-35; G.L. 1956, § 21-5-4; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
+       G.L. 1923, ch. 203, § 32; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 31; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-35; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-4" target="_self">
+         21-5-4
+        </a>
+       </cite>
+       ; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
       </p>
       <p>
        Reenactments.
@@ -3326,7 +3341,13 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1923, ch. 203, § 32; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 31; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-36; G.L. 1956, § 21-5-5; P.L. 1962, ch. 80, § 2.
+       G.L. 1923, ch. 203, § 32; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 31; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-36; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-5" target="_self">
+         21-5-5
+        </a>
+       </cite>
+       ; P.L. 1962, ch. 80, § 2.
       </p>
      </div>
     </div>
@@ -3345,7 +3366,13 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1923, ch. 203, § 33; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 32; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-37; P.L. 1960, ch. 74, § 10; G.L. 1956, § 21-5-6; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
+       G.L. 1923, ch. 203, § 33; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 32; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-37; P.L. 1960, ch. 74, § 10; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-6" target="_self">
+         21-5-6
+        </a>
+       </cite>
+       ; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
       </p>
      </div>
     </div>
@@ -3370,7 +3397,13 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1923, ch. 203, § 34; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 33; G.L. 1956, § 21-5-38; G.L. 1956, § 21-5-7; P.L. 1962, ch. 80, § 2.
+       G.L. 1923, ch. 203, § 34; P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 33; G.L. 1956, § 21-5-38; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-7" target="_self">
+         21-5-7
+        </a>
+       </cite>
+       ; P.L. 1962, ch. 80, § 2.
       </p>
      </div>
     </div>
@@ -3388,7 +3421,13 @@
        </b>
       </h4>
       <p>
-       This section (G.L. 1923, ch. 203, § 35, as enacted by P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 34; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-39; G.L. 1956, § 21-5-8, as enacted by P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2), concerning inspection by the director of machines used for the purpose of analysis or inspection of milk, was repealed by P.L. 2002, ch. 292, § 50, effective June 28, 2002.
+       This section (G.L. 1923, ch. 203, § 35, as enacted by P.L. 1928, ch. 1138, § 1; G.L. 1938, ch. 216, § 34; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-39; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-8" target="_self">
+         21-5-8
+        </a>
+       </cite>
+       , as enacted by P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2), concerning inspection by the director of machines used for the purpose of analysis or inspection of milk, was repealed by P.L. 2002, ch. 292, § 50, effective June 28, 2002.
       </p>
      </div>
     </div>
@@ -3407,7 +3446,13 @@
        History of Section.
       </h4>
       <p>
-       G.L. 1956, ch. 203, § 36; P.L. 1928, ch. 1138, § 1; P.L. 1932, ch. 1915, § 1; G.L. 1938, ch. 216, § 35; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-40; G.L. 1956, § 21-5-9; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
+       G.L. 1956, ch. 203, § 36; P.L. 1928, ch. 1138, § 1; P.L. 1932, ch. 1915, § 1; G.L. 1938, ch. 216, § 35; impl. am. P.L. 1939, ch. 660, § 160; G.L. 1956, § 21-5-40; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c05s21-5-9" target="_self">
+         21-5-9
+        </a>
+       </cite>
+       ; P.L. 1962, ch. 80, § 2; P.L. 1968, ch. 158, § 2.
       </p>
      </div>
      <div>
@@ -3582,7 +3627,13 @@
        </b>
       </h4>
       <p>
-       This chapter (P.L. 1930, ch. 1594, §§ 1-9; G.L. 1938, ch. 219, §§ 1-9; P.L. 1946, ch. 1768, § 1; G.L. 1956, §§ 21-6-1 — 21-6-12) was repealed by P.L. 1962, ch. 80, § 5.
+       This chapter (P.L. 1930, ch. 1594, §§ 1-9; G.L. 1938, ch. 219, §§ 1-9; P.L. 1946, ch. 1768, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c06s21-6-1" target="_self">
+         21-6-1
+        </a>
+       </cite>
+       — 21-6-12) was repealed by P.L. 1962, ch. 80, § 5.
       </p>
      </div>
     </div>
@@ -4693,7 +4744,13 @@
       </b>
      </h3>
      <p>
-      The provisions of §§ 21-9-2 and 21-9-12(1)(i) restricting the sale, possession, or control of any frozen dessert or frozen dessert mix to licensed persons shall not apply to the transfer of a frozen dessert or milk shake by a retailer to a purchaser, or to common carriers or to warehouse operators while engaged in lawfully transporting or storing the frozen desserts and/or frozen dessert mixes, or to any employee of any of those persons acting within the scope of his or her employment.
+      The provisions of §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c09s21-9-2" target="_self">
+        21-9-2
+       </a>
+      </cite>
+      and 21-9-12(1)(i) restricting the sale, possession, or control of any frozen dessert or frozen dessert mix to licensed persons shall not apply to the transfer of a frozen dessert or milk shake by a retailer to a purchaser, or to common carriers or to warehouse operators while engaged in lawfully transporting or storing the frozen desserts and/or frozen dessert mixes, or to any employee of any of those persons acting within the scope of his or her employment.
      </p>
      <div>
       <h4 id="t21c09s21-9-21-historyofsection">
@@ -5458,7 +5515,31 @@
        </b>
       </h4>
       <p>
-       This chapter (G.L. 1896, ch. 131, §§ 6-16, 24; G.L. 1909, ch. 157, §§ 6-16, 24; G.L. 1923, ch. 187, §§ 6-16, 24; G.L. 1938, ch. 379, §§ 1-12; G.L. 1956, §§ 21-12-1 — 21-12-12) was repealed by P.L. 1970, ch. 142, § 1.
+       This chapter (G.L. 1896, ch. 131, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t06c16" target="_blank">
+         6-16
+        </a>
+       </cite>
+       , 24; G.L. 1909, ch. 157, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t06c16" target="_blank">
+         6-16
+        </a>
+       </cite>
+       , 24; G.L. 1923, ch. 187, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t06c16" target="_blank">
+         6-16
+        </a>
+       </cite>
+       , 24; G.L. 1938, ch. 379, §§ 1-12; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c12s21-12-1" target="_self">
+         21-12-1
+        </a>
+       </cite>
+       — 21-12-12) was repealed by P.L. 1970, ch. 142, § 1.
       </p>
      </div>
     </div>
@@ -20199,7 +20280,25 @@
        </b>
       </h3>
       <p>
-       Any person who violates § 21-28-4.01(A), 21-28-4.01.1, or 21-28-4.07 by distributing or manufacturing a controlled substance listed in schedules I or II in the building or on the grounds, or within three hundred (300) yards of the grounds of a public or private elementary, vocational, or secondary school, or public park or playground shall be punished by a term of imprisonment or fine, or both, up to twice that authorized by § 21-28-4.01(A) or 21-28-4.07, but not exceeding life imprisonment.
+       Any person who violates § 21-28-4.01(A),
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c28asIVs21-28-4.01.1" target="_self">
+         21-28-4.01.1
+        </a>
+       </cite>
+       , or
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c28asIVs21-28-4.07" target="_self">
+         21-28-4.07
+        </a>
+       </cite>
+       by distributing or manufacturing a controlled substance listed in schedules I or II in the building or on the grounds, or within three hundred (300) yards of the grounds of a public or private elementary, vocational, or secondary school, or public park or playground shall be punished by a term of imprisonment or fine, or both, up to twice that authorized by § 21-28-4.01(A) or
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c28asIVs21-28-4.07" target="_self">
+         21-28-4.07
+        </a>
+       </cite>
+       , but not exceeding life imprisonment.
       </p>
       <div>
        <h4 id="t21c28asIVs21-28-4.07.1-historyofsection">
@@ -20568,7 +20667,13 @@
       </h3>
       <ol type="a">
        <li id="t21c28asIVs21-28-4.14ol1a">
-        Any person convicted of a third or subsequent offense under this chapter, except for violations of § 21-28-4.01(c)(2)(iv), § 21-28-4.01(c)(2)(v), or § 21-28-4.01(c)(2)(vi), may be imprisoned for a term up to three (3) times the term authorized, and fined an amount up to three (3) times that authorized by § 21-28-4.11, or both.
+        Any person convicted of a third or subsequent offense under this chapter, except for violations of § 21-28-4.01(c)(2)(iv), § 21-28-4.01(c)(2)(v), or § 21-28-4.01(c)(2)(vi), may be imprisoned for a term up to three (3) times the term authorized, and fined an amount up to three (3) times that authorized by §
+        <cite class="ocri">
+         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c28asIVs21-28-4.11" target="_self">
+          21-28-4.11
+         </a>
+        </cite>
+        , or both.
        </li>
        <li id="t21c28asIVs21-28-4.14ol1b">
         For purposes of this section, an offense is considered a third or subsequent offense if, prior to his or her conviction of the offense, the offender has at any time been convicted twice under this chapter, except for violations of § 21-28-4.01(c)(2)(iii), § 21-28-4.01(c)(2)(iv), § 21-28-4.01(c)(2)(v), or § 21-28-4.01(c)(2)(vi), or twice under any statute of the United States or of any other state, or any combination of them, relating to narcotic drugs, marijuana, depressant, stimulant, or hallucinogenic drugs.
@@ -20918,7 +21023,31 @@
        </b>
       </h3>
       <p>
-       The laws related to summonses, subpoenas and related records for violations of subparagraphs 21-28-4.01(c)(2)(iii) and 21-28-4.01(c)(2)(iv), shall be served and heard in the same manner and in a similar form as ordinary civil actions in the traffic tribunal, as provided for in §§ 31-27-12, 31-27-12.1, 31-41.1-1, and as may be prescribed by rules and regulations promulgated by the chief magistrate of the traffic tribunal pursuant to § 8-6-2.
+       The laws related to summonses, subpoenas and related records for violations of subparagraphs 21-28-4.01(c)(2)(iii) and 21-28-4.01(c)(2)(iv), shall be served and heard in the same manner and in a similar form as ordinary civil actions in the traffic tribunal, as provided for in §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.31.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t31c27s31-27-12" target="_blank">
+         31-27-12
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.31.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t31c27s31-27-12.1" target="_blank">
+         31-27-12.1
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.31.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t31c41.1s31-41.1-1" target="_blank">
+         31-41.1-1
+        </a>
+       </cite>
+       , and as may be prescribed by rules and regulations promulgated by the chief magistrate of the traffic tribunal pursuant to §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.08.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t08c06s8-6-2" target="_blank">
+         8-6-2
+        </a>
+       </cite>
+       .
       </p>
       <div>
        <h4 id="t21c28asIVs21-28-4.22-historyofsection">
@@ -21376,6 +21505,22 @@
          NOTES TO DECISIONS
         </b>
        </h4>
+       <nav>
+        <ul class="leaders">
+         <li>
+          <a href="#t21c28asVs21-28-5.04-notestodecisions-constitutionality">
+           Constitutionality.
+          </a>
+          <ul class="leaders">
+           <li>
+            <a href="#t21c28asVs21-28-5.04-notestodecisions-constitutionality-doublejeopardy">
+             — Double Jeopardy.
+            </a>
+           </li>
+          </ul>
+         </li>
+        </ul>
+       </nav>
        <div>
         <h5 class="notes_section" id="t21c28asVs21-28-5.04-notestodecisions-constitutionality">
          <b>
@@ -21917,20 +22062,6 @@
         </b>
        </h4>
        <nav>
-        <ul class="leaders">
-         <li>
-          <a href="#t21c28asVs21-28-5.04-notestodecisions-constitutionality">
-           Constitutionality.
-          </a>
-          <ul class="leaders">
-           <li>
-            <a href="#t21c28asVs21-28-5.04-notestodecisions-constitutionality-doublejeopardy">
-             — Double Jeopardy.
-            </a>
-           </li>
-          </ul>
-         </li>
-        </ul>
         <ul class="leaders">
          <li>
           <a href="#t21c28asVs21-28-5.04.2-notestodecisions-constitutionality">
@@ -28136,7 +28267,13 @@
        </b>
       </h4>
       <p>
-       These sections (P.L. 1955, ch. 3510, §§ 1-19; G.L. 1956, §§ 21-29-1 — 21-29-23; P.L. 1969, ch. 118, § 6; P.L. 1971, ch. 268, § 1; P.L. 1974, ch. 118, § 16) were repealed by P.L. 1974, ch. 183, § 1.
+       These sections (P.L. 1955, ch. 3510, §§ 1-19; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c29s21-29-1" target="_self">
+         21-29-1
+        </a>
+       </cite>
+       — 21-29-23; P.L. 1969, ch. 118, § 6; P.L. 1971, ch. 268, § 1; P.L. 1974, ch. 118, § 16) were repealed by P.L. 1974, ch. 183, § 1.
       </p>
       <p>
        For present law see §§
