--- a/transforms/ri/ocri/r70/gov.ri.code.title.22.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.22.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t22">
     <b>
      Title 22 General Assembly
@@ -12334,7 +12337,13 @@
        Reenactments.
       </p>
       <p>
-       The 2002 Reenactment added “Annual” in the section heading and substituted “this chapter” for “§§ 22-11-1 to 22-1-5, inclusive.”
+       The 2002 Reenactment added “Annual” in the section heading and substituted “this chapter” for “§§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.22.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t22c11s22-11-1" target="_self">
+         22-11-1
+        </a>
+       </cite>
+       to 22-1-5, inclusive.”
       </p>
      </div>
     </div>
