--- a/transforms/ri/ocri/r70/gov.ri.code.title.26.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.26.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t26">
     <b>
      Title 26 Insane and Mentally Deficient Persons
@@ -310,7 +313,13 @@
       </b>
      </p>
      <p>
-      These sections (G.L. 1896, ch. 82, §§ 26-28; G.L. 1909, ch. 96, §§ 26-28; P.L. 1910, ch. 642, § 4; G.L. 1923, ch. 108, §§ 26-28; P.L. 1928, ch. 1210, § 1; G.L. 1938, ch. 71, §§ 26-28; G.L. 1956, §§ 26-4-11 — 26-4-13), concerning removal of any insane person from an adult correctional institution, were repealed by P.L. 1973, ch. 175, § 1.
+      These sections (G.L. 1896, ch. 82, §§ 26-28; G.L. 1909, ch. 96, §§ 26-28; P.L. 1910, ch. 642, § 4; G.L. 1923, ch. 108, §§ 26-28; P.L. 1928, ch. 1210, § 1; G.L. 1938, ch. 71, §§ 26-28; G.L. 1956, §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.26.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t26c04s26-4-11" target="_self">
+        26-4-11
+       </a>
+      </cite>
+      — 26-4-13), concerning removal of any insane person from an adult correctional institution, were repealed by P.L. 1973, ch. 175, § 1.
      </p>
     </div>
    </div>
