--- a/transforms/ri/ocri/r70/gov.ri.code.title.30.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.30.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t30">
     <b>
      Title 30 Military Affairs and Defense
@@ -3012,6 +3015,27 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial">
+          Demand for Court-Martial.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial-effect">
+            — Effect.
+           </a>
+          </li>
+          <li>
+           <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial-procedure">
+            — Procedure.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t30c03s30-3-25-notestodecisions-demandforcourtmartial">
         <b>
@@ -3744,25 +3768,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial">
-        Demand for Court-Martial.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial-effect">
-          — Effect.
-         </a>
-        </li>
-        <li>
-         <a href="#t30c03s30-3-25-notestodecisions-demandforcourtmartial-procedure">
-          — Procedure.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t30c04s30-4-1-snav01">
        <a href="#t30c04s30-4-1">
@@ -15140,7 +15145,13 @@
        </b>
       </h4>
       <p>
-       These sections (P.L. 1950 (s.s.), ch. 2641, §§ 13-30; P.L. 1952, ch. 3029, § 1; G.L. 1956, §§ 30-15-23 to 30-15-40) were repealed by P.L. 1973, ch. 67, § 1.
+       These sections (P.L. 1950 (s.s.), ch. 2641, §§ 13-30; P.L. 1952, ch. 3029, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.30.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t30c15s30-15-23" target="_self">
+         30-15-23
+        </a>
+       </cite>
+       to 30-15-40) were repealed by P.L. 1973, ch. 67, § 1.
       </p>
      </div>
     </div>
