--- a/transforms/ri/ocri/r70/gov.ri.code.title.35.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.35.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t35">
     <b>
      Title 35 Public Finance
@@ -10110,7 +10113,43 @@
           Public members of the authority shall be removable by the chair for cause only, and removal solely for partisan or personal reasons unrelated to capacity or fitness for the office shall be unlawful.
          </p>
          <p id="t35c8.1s35-8.1-5ol1a6.2">
-          Newly appointed and qualified public members shall, within six (6) months of their appointment, attend a training course that shall be developed and provided by the office of the general treasurer and shall include instruction in the following areas: the provisions of chapters 35-8.1, 42-46, 36-14 and 38-2 of the Rhode Island general laws; and the authority’s rules and regulations. The director of the department of administration shall, within ninety (90) days of the effective date of this act [July 4, 2006], prepare and disseminate training materials relating to the provisions of chapters 42-46, 36-14 and 38-2.
+          Newly appointed and qualified public members shall, within six (6) months of their appointment, attend a training course that shall be developed and provided by the office of the general treasurer and shall include instruction in the following areas: the provisions of chapters 35-8.1,
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.42.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t42c46" target="_blank">
+            42-46
+           </a>
+          </cite>
+          ,
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c14" target="_blank">
+            36-14
+           </a>
+          </cite>
+          and
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.38.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t38c02" target="_blank">
+            38-2
+           </a>
+          </cite>
+          of the Rhode Island general laws; and the authority’s rules and regulations. The director of the department of administration shall, within ninety (90) days of the effective date of this act [July 4, 2006], prepare and disseminate training materials relating to the provisions of chapters
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.42.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t42c46" target="_blank">
+            42-46
+           </a>
+          </cite>
+          ,
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c14" target="_blank">
+            36-14
+           </a>
+          </cite>
+          and
+          <cite class="ocri">
+           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.38.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t38c02" target="_blank">
+            38-2
+           </a>
+          </cite>
+          .
          </p>
         </li>
        </ol>
@@ -11762,11 +11801,11 @@
         <li id="t35c10s35-10-11ol14-i">
          The funds are initially invested through a financial institution as defined in subdivision
          <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.19.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t19c01" target="_blank">
-           19-1
+          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.19.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t19c01s19-1-1ol17" target="_blank">
+           19-1-1(7)
           </a>
          </cite>
-         -1(7) or chapter
+         or chapter
          <cite class="ocri">
           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.19.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t19c01" target="_blank">
            19-1
@@ -15575,7 +15614,13 @@
        Representatives of all state agencies are to participate in all conferences for which their input is germane.
       </li>
       <li id="t35c17s35-17-1ol1e">
-       The department of human services shall provide monthly data to the members of the caseload estimating conference by the fifteenth day of the following month. Monthly data shall include, but is not limited to, actual caseloads and expenditures for the following case assistance programs: Rhode Island Works, SSI state program, general public assistance, and child care. For individuals eligible to receive the payment under § 40-6-27(a)(1)(vi), the report shall include the number of individuals enrolled in a managed care plan receiving long-term-care services and supports and the number receiving fee-for-service benefits. The executive office of health and human services shall report relevant caseload information and expenditures for the following medical assistance categories: hospitals, long-term care, managed care, pharmacy, and other medical services. In the category of managed care, caseload information and expenditures for the following populations shall be separately identified and reported: children with disabilities, children in foster care, and children receiving adoption assistance and RIte Share enrollees under § 40-8.4-12(j). The information shall include the number of Medicaid recipients whose estate may be subject to a recovery and the anticipated amount to be collected from those subject to recovery, the total recoveries collected each month and number of estates attached to the collections and each month, the number of open cases and the number of cases that have been open longer than three months.
+       The department of human services shall provide monthly data to the members of the caseload estimating conference by the fifteenth day of the following month. Monthly data shall include, but is not limited to, actual caseloads and expenditures for the following case assistance programs: Rhode Island Works, SSI state program, general public assistance, and child care. For individuals eligible to receive the payment under § 40-6-27(a)(1)(vi), the report shall include the number of individuals enrolled in a managed care plan receiving long-term-care services and supports and the number receiving fee-for-service benefits. The executive office of health and human services shall report relevant caseload information and expenditures for the following medical assistance categories: hospitals, long-term care, managed care, pharmacy, and other medical services. In the category of managed care, caseload information and expenditures for the following populations shall be separately identified and reported: children with disabilities, children in foster care, and children receiving adoption assistance and RIte Share enrollees under §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40c8.4s40-8.4-12ol1j" target="_blank">
+         40-8.4-12(j)
+        </a>
+       </cite>
+       . The information shall include the number of Medicaid recipients whose estate may be subject to a recovery and the anticipated amount to be collected from those subject to recovery, the total recoveries collected each month and number of estates attached to the collections and each month, the number of open cases and the number of cases that have been open longer than three months.
       </li>
       <li id="t35c17s35-17-1ol1f">
        Beginning July 1, 2021, the department of behavioral healthcare, developmental disabilities and hospitals shall provide monthly data to the members of the caseload estimating conference by the fifteenth day of the following month. Monthly data shall include, but is not limited to, actual caseloads and expenditures for the private community developmental disabilities services program. Information shall include, but not be limited to: the number of cases and expenditures from the beginning of the fiscal year at the beginning of the prior month; cases added and denied during the prior month; expenditures made; and the number of cases and expenditures at the end of the month. The information concerning cases added and denied shall include summary information and profiles of the service-demand request for eligible adults meeting the state statutory definition for services from the division of developmental disabilities as determined by the division, including age, Medicaid eligibility and agency selection placement with a list of the services provided, and the reasons for the determinations of ineligibility for those cases denied. The department shall also provide, monthly, the number of individuals in a shared-living arrangement and how many may have returned to a twenty-four-hour (24) residential placement in that month. The department shall also report, monthly, any and all information for the consent decree that has been submitted to the federal court as well as the number of unduplicated individuals employed; the place of employment; and the number of hours working. The department shall also provide the amount of funding allocated to individuals above the assigned resource levels; the number of individuals and the assigned resource level; and the reasons for the approved additional resources. The department will also collect and forward to the house fiscal advisor, the senate fiscal advisor, and the state budget officer, by November 1 of each year, the annual cost reports for each community-based provider for the prior fiscal year. The department shall also provide the amount of patient liability to be collected and the amount collected as well as the number of individuals who have a financial obligation. The department will also provide a list of community-based providers awarded an advanced payment for residential and community-based day programs; the address for each property; and the value of the advancement. If the property is sold, the department must report the final sale, including the purchaser, the value of the sale, and the name of the agency that operated the facility. If residential property, the department must provide the number of individuals residing in the home at the time of sale and identify the type of residential placement that the individual(s) will be moving to. The department must report if the property will continue to be licensed as a residential facility. The department will also report any newly licensed twenty-four-hour (24) group home; the provider operating the facility; and the number of individuals residing in the facility. Prior to December 1, 2017, the department will provide the authorizations for community-based and day programs, including the unique number of individuals eligible to receive the services and at the end of each month the unique number of individuals who participated in the programs and claims processed.
