--- a/transforms/ri/ocri/r70/gov.ri.code.title.36.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.36.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t36">
     <b>
      Title 36 Public Officers and Employees
@@ -9293,7 +9296,13 @@
       </b>
      </h3>
      <p>
-      With respect to employees of the state as defined in § 36-7-2(1)(i) and (1)(ii), the retirement board, as defined in § 36-7-2(9), may request the governor to authorize a referendum to be conducted pursuant to § 218(d)(3) of the federal Social Security Act, 42 U.S.C. § 418(d)(3), as amended, on the question of whether service in positions covered by the state retirement system shall be excluded from or included under an agreement under this chapter.
+      With respect to employees of the state as defined in § 36-7-2(1)(i) and (1)(ii), the retirement board, as defined in §
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c07s36-7-2ol19" target="_self">
+        36-7-2(9)
+       </a>
+      </cite>
+      , may request the governor to authorize a referendum to be conducted pursuant to § 218(d)(3) of the federal Social Security Act, 42 U.S.C. § 418(d)(3), as amended, on the question of whether service in positions covered by the state retirement system shall be excluded from or included under an agreement under this chapter.
      </p>
      <div>
       <h4 id="t36c07s36-7-11-historyofsection">
@@ -9318,7 +9327,19 @@
       </b>
      </h3>
      <p>
-      With respect to the employees of any city or town or agency of the state included in § 36-7-2(1)(iii) which has elected to participate in accordance with and pursuant to §§ 36-7-6 and 36-7-7, which employees are members of a retirement system, the legislative body of the city or town or agency may request the governor to authorize a referendum to be conducted pursuant to § 218(d)(3) of the federal Social Security Act, 42 U.S.C. § 418(d)(3), as amended, on the question of whether service in positions covered by the retirement system shall be excluded from or included under an agreement under this chapter.
+      With respect to the employees of any city or town or agency of the state included in § 36-7-2(1)(iii) which has elected to participate in accordance with and pursuant to §§
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c07s36-7-6" target="_self">
+        36-7-6
+       </a>
+      </cite>
+      and
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c07s36-7-7" target="_self">
+        36-7-7
+       </a>
+      </cite>
+      , which employees are members of a retirement system, the legislative body of the city or town or agency may request the governor to authorize a referendum to be conducted pursuant to § 218(d)(3) of the federal Social Security Act, 42 U.S.C. § 418(d)(3), as amended, on the question of whether service in positions covered by the retirement system shall be excluded from or included under an agreement under this chapter.
      </p>
      <div>
       <h4 id="t36c07s36-7-12-historyofsection">
@@ -18653,6 +18674,22 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t36c10.1s36-10.1-2-notestodecisions-crimerelatedtopublicoffice">
+          Crime Related to Public Office.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t36c10.1s36-10.1-2-notestodecisions-crimerelatedtopublicoffice-noconviction">
+            — No Conviction.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t36c10.1s36-10.1-2-notestodecisions-crimerelatedtopublicoffice">
         <b>
@@ -18786,20 +18823,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t36c10.1s36-10.1-2-notestodecisions-crimerelatedtopublicoffice">
-          Crime Related to Public Office.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t36c10.1s36-10.1-2-notestodecisions-crimerelatedtopublicoffice-noconviction">
-            — No Conviction.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t36c10.1s36-10.1-3-notestodecisions-construction">
@@ -19566,7 +19589,19 @@
        .
       </li>
       <li id="t36c10.3s36-10.3-1ol12">
-       “Employee” means an employee as defined in §§ 36-8-1(9) and 45-21-2(7) and a teacher as defined in § 16-16-1(12), effective July 1, 2012; provided however, effective July 1, 2015, “employee” shall not include any employee with twenty (20) or more years of total service as of June 30, 2012, in the employees retirement system under chapters 8 through 10 of title 36 or chapter 16 of title 16 (ERS), or the municipal employees retirement system under chapter 21 of title 45 (MERS).
+       “Employee” means an employee as defined in §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c08s36-8-1ol19" target="_self">
+         36-8-1(9)
+        </a>
+       </cite>
+       and
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.45.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t45c21s45-21-2ol17" target="_blank">
+         45-21-2(7)
+        </a>
+       </cite>
+       and a teacher as defined in § 16-16-1(12), effective July 1, 2012; provided however, effective July 1, 2015, “employee” shall not include any employee with twenty (20) or more years of total service as of June 30, 2012, in the employees retirement system under chapters 8 through 10 of title 36 or chapter 16 of title 16 (ERS), or the municipal employees retirement system under chapter 21 of title 45 (MERS).
       </li>
       <li id="t36c10.3s36-10.3-1ol13">
        “Employer” means the State of Rhode Island or the local municipality which employs a member of the Employees Retirement System under chapters 8 through 10 of title 36 or chapter 16 of title 16 (ERS) or the Municipal Employees Retirement System under chapters 21 and 21.2 of title 45 (MERS).
@@ -23120,7 +23155,13 @@
        All money immediately required for the payment of OPEB Benefits shall be invested only in accordance with the written objectives and guidelines established by the state investment commission pursuant to the provisions of chapter 10 of title 35 and other applicable law.
       </li>
       <li id="t36c12.1s36-12.1-21ol1b">
-       All money not immediately required for the payment of OPEB Benefits shall be invested in accordance with the provisions of chapter 10 of title 35 and other applicable law and shall be held in a custodial or trust account in accordance with § 36-12.1-5. The trust and custodial account established under this section shall be maintained pursuant to written documents which expressly provide that it shall be impossible at any time prior to the satisfaction of all liabilities with respect to employees and their beneficiaries for any part of the corpus or income to be used for or diverted to purposes other than the payment of OPEB Benefits to employees and their beneficiaries (except as otherwise permitted by § 36-12.1).
+       All money not immediately required for the payment of OPEB Benefits shall be invested in accordance with the provisions of chapter 10 of title 35 and other applicable law and shall be held in a custodial or trust account in accordance with §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.36.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t36c12.1s36-12.1-5" target="_self">
+         36-12.1-5
+        </a>
+       </cite>
+       . The trust and custodial account established under this section shall be maintained pursuant to written documents which expressly provide that it shall be impossible at any time prior to the satisfaction of all liabilities with respect to employees and their beneficiaries for any part of the corpus or income to be used for or diverted to purposes other than the payment of OPEB Benefits to employees and their beneficiaries (except as otherwise permitted by § 36-12.1).
       </li>
      </ol>
      <div>
