--- a/transforms/ri/ocri/r70/gov.ri.code.title.37.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.37.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t37">
     <b>
      Title 37 Public Property and Works
@@ -6481,11 +6484,11 @@
         <li id="t37c2.4s37-2.4-2ol1b3">
          Recommending to the chief purchasing officer prices in accordance with subdivision
          <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.37.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t37c2.4s37-2.4-3ol1a" target="_self">
-           37-2.4-3(a)
+          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.37.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t37c2.4s37-2.4-3ol1a3" target="_self">
+           37-2.4-3(a)(3)
           </a>
          </cite>
-         (3) for goods and services that are identified in subdivision (b)(1) of this section;
+         for goods and services that are identified in subdivision (b)(1) of this section;
         </li>
         <li id="t37c2.4s37-2.4-2ol1b4">
          Developing, maintaining, and recommending to the chief purchasing officer a preferred procurement contract list of goods and services identified and priced under subdivisions (b)(1) and (2) of this section;
@@ -15622,6 +15625,27 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t37c12s37-12-2-notestodecisions-alternateremedies">
+          Alternate Remedies.
+         </a>
+        </li>
+        <li>
+         <a href="#t37c12s37-12-2-notestodecisions-recoveryformaterialsupplied">
+          Recovery for Material Supplied.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t37c12s37-12-2-notestodecisions-recoveryformaterialsupplied-notice">
+            — Notice.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t37c12s37-12-2-notestodecisions-alternateremedies">
         <b>
@@ -16128,25 +16152,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t37c12s37-12-2-notestodecisions-alternateremedies">
-        Alternate Remedies.
-       </a>
-      </li>
-      <li>
-       <a href="#t37c12s37-12-2-notestodecisions-recoveryformaterialsupplied">
-        Recovery for Material Supplied.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t37c12s37-12-2-notestodecisions-recoveryformaterialsupplied-notice">
-          — Notice.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t37c12.1s37-12.1-1-snav01">
        <a href="#t37c12.1s37-12.1-1">
@@ -18004,7 +18009,19 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1958, ch. 163, §§ 1-17, 19, 20, 22; P.L. 1963, ch. 141, § 1; P.L. 1973, ch. 77, §§ 1-8; P.L. 1978, ch. 254, §§ 1-11; P.L. 1979, ch. 360, § 1; P.L. 1980, ch. 362, § 1; P.L. 1988, ch. 332, § 1; P.L. 1989, ch. 116, § 1; P.L. 1989, ch. 326, § 1; P.L. 1990, ch. 65, art. 85, § 1; P.L. 1990, ch. 215, § 1; P.L. 1990, ch. 293, § 2; P.L. 1992, ch. 372, § 1; P.L. 1994, ch. 121, § 1; P.L. 1996, ch. 100, art. 15, § 1; Repealed by P.L. 1997, ch. 30, art. 2, § 3, effective July 1, 1997. For present comparable provisions, see § 35-8.1-8.1 et seq.
+       P.L. 1958, ch. 163, §§ 1-17, 19, 20, 22; P.L. 1963, ch. 141, § 1; P.L. 1973, ch. 77, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c08" target="_blank">
+         1-8
+        </a>
+       </cite>
+       ; P.L. 1978, ch. 254, §§ 1-11; P.L. 1979, ch. 360, § 1; P.L. 1980, ch. 362, § 1; P.L. 1988, ch. 332, § 1; P.L. 1989, ch. 116, § 1; P.L. 1989, ch. 326, § 1; P.L. 1990, ch. 65, art. 85, § 1; P.L. 1990, ch. 215, § 1; P.L. 1990, ch. 293, § 2; P.L. 1992, ch. 372, § 1; P.L. 1994, ch. 121, § 1; P.L. 1996, ch. 100, art. 15, § 1; Repealed by P.L. 1997, ch. 30, art. 2, § 3, effective July 1, 1997. For present comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.35.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t35c8.1s35-8.1-8.1" target="_blank">
+         35-8.1-8.1
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
