--- a/transforms/ri/ocri/r70/gov.ri.code.title.39.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.39.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t39">
     <b>
      Title 39 Public Utilities and Carriers
@@ -21713,7 +21716,13 @@
        </b>
       </h4>
       <p>
-       Bills of lading, § 6A-7-102 et seq.
+       Bills of lading, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p01s6A-7-102" target="_blank">
+         6A-7-102
+        </a>
+       </cite>
+       et seq.
       </p>
      </div>
      <div>
@@ -22154,7 +22163,19 @@
        et seq.
       </p>
       <p>
-       Stoppage of goods in transit, §§ 6A-2-702 et seq., 6A-7-504.
+       Stoppage of goods in transit, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac02p07s6A-2-702" target="_blank">
+         6A-2-702
+        </a>
+       </cite>
+       et seq.,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p05s6A-7-504" target="_blank">
+         6A-7-504
+        </a>
+       </cite>
+       .
       </p>
      </div>
      <div>
@@ -22862,10 +22883,28 @@
        </b>
       </h4>
       <p>
-       Bills of lading, § 6A-7-102 et seq.
+       Bills of lading, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p01s6A-7-102" target="_blank">
+         6A-7-102
+        </a>
+       </cite>
+       et seq.
       </p>
       <p>
-       Stoppage of goods in transit, §§ 6A-2-609 et seq., 6A-7-504.
+       Stoppage of goods in transit, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac02p06s6A-2-609" target="_blank">
+         6A-2-609
+        </a>
+       </cite>
+       et seq.,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p05s6A-7-504" target="_blank">
+         6A-7-504
+        </a>
+       </cite>
+       .
       </p>
      </div>
     </div>
@@ -23726,7 +23765,25 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1935, ch. 2268, art. 2, §§ 1-8; G.L. 1938, ch. 99, art. 2, §§ 1-8; G.L. 1938, ch. 99, art. 2, §§ 1-10; P.L. 1946, ch. 1805, § 1; G.L. 1956, § 39-12-2; P.L. 1958, ch. 87, § 1; P.L. 1967, ch. 209, § 1; P.L. 1984, ch. 81, § 15.
+       P.L. 1935, ch. 2268, art. 2, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c08" target="_blank">
+         1-8
+        </a>
+       </cite>
+       ; G.L. 1938, ch. 99, art. 2, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.01.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t01c08" target="_blank">
+         1-8
+        </a>
+       </cite>
+       ; G.L. 1938, ch. 99, art. 2, §§ 1-10; P.L. 1946, ch. 1805, § 1; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.39.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t39c12s39-12-2" target="_self">
+         39-12-2
+        </a>
+       </cite>
+       ; P.L. 1958, ch. 87, § 1; P.L. 1967, ch. 209, § 1; P.L. 1984, ch. 81, § 15.
       </p>
      </div>
      <div>
@@ -24246,10 +24303,28 @@
        </b>
       </h4>
       <p>
-       Bills of lading, § 6A-7-102 et seq.
+       Bills of lading, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p01s6A-7-102" target="_blank">
+         6A-7-102
+        </a>
+       </cite>
+       et seq.
       </p>
       <p>
-       Stoppage of goods in transit, §§ 6A-2-702 et seq., 6A-7-504.
+       Stoppage of goods in transit, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac02p07s6A-2-702" target="_blank">
+         6A-2-702
+        </a>
+       </cite>
+       et seq.,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.06A.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t6Ac07p05s6A-7-504" target="_blank">
+         6A-7-504
+        </a>
+       </cite>
+       .
       </p>
      </div>
      <div>
@@ -25209,7 +25284,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1935, ch. 2268, art. 7, § 1; G.L. 1938, ch. 99, art. 7, § 1; P.L. 1946, ch. 1805, § 1; G.L. 1956, § 39-12-32; G.L. 1956, § 32-12-35; P.L. 1958, ch. 87, § 1.
+       P.L. 1935, ch. 2268, art. 7, § 1; G.L. 1938, ch. 99, art. 7, § 1; P.L. 1946, ch. 1805, § 1; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.39.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t39c12s39-12-32" target="_self">
+         39-12-32
+        </a>
+       </cite>
+       ; G.L. 1956, § 32-12-35; P.L. 1958, ch. 87, § 1.
       </p>
      </div>
      <div>
@@ -30978,6 +31059,74 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t39c15s39-15-1-notestodecisions-ingeneral">
+          In General.
+         </a>
+        </li>
+        <li>
+         <a href="#t39c15s39-15-1-notestodecisions-construction">
+          Construction.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-delegationofpower">
+            — Delegation of Power.
+           </a>
+          </li>
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-necessityandexpediency">
+            — Necessity and Expediency.
+           </a>
+          </li>
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-personhavingcontractwithtown">
+            — Person Having Contract With Town.
+           </a>
+          </li>
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-petition">
+            — Petition.
+           </a>
+          </li>
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-publicuse">
+            — Public Use.
+           </a>
+          </li>
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-construction-transferfromoneownertoanother">
+            — Transfer From One Owner to Another.
+           </a>
+          </li>
+         </ul>
+        </li>
+        <li>
+         <a href="#t39c15s39-15-1-notestodecisions-applicability">
+          Applicability.
+         </a>
+        </li>
+        <li>
+         <a href="#t39c15s39-15-1-notestodecisions-condemnation">
+          Condemnation.
+         </a>
+        </li>
+        <li>
+         <a href="#t39c15s39-15-1-notestodecisions-powersofcouncil">
+          Powers of Council.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t39c15s39-15-1-notestodecisions-powersofcouncil-ratification">
+            — Ratification.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t39c15s39-15-1-notestodecisions-ingeneral">
         <b>
@@ -31277,72 +31426,6 @@
        </b>
       </h4>
       <nav>
-       <ul class="leaders">
-        <li>
-         <a href="#t39c15s39-15-1-notestodecisions-ingeneral">
-          In General.
-         </a>
-        </li>
-        <li>
-         <a href="#t39c15s39-15-1-notestodecisions-construction">
-          Construction.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-delegationofpower">
-            — Delegation of Power.
-           </a>
-          </li>
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-necessityandexpediency">
-            — Necessity and Expediency.
-           </a>
-          </li>
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-personhavingcontractwithtown">
-            — Person Having Contract With Town.
-           </a>
-          </li>
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-petition">
-            — Petition.
-           </a>
-          </li>
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-publicuse">
-            — Public Use.
-           </a>
-          </li>
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-construction-transferfromoneownertoanother">
-            — Transfer From One Owner to Another.
-           </a>
-          </li>
-         </ul>
-        </li>
-        <li>
-         <a href="#t39c15s39-15-1-notestodecisions-applicability">
-          Applicability.
-         </a>
-        </li>
-        <li>
-         <a href="#t39c15s39-15-1-notestodecisions-condemnation">
-          Condemnation.
-         </a>
-        </li>
-        <li>
-         <a href="#t39c15s39-15-1-notestodecisions-powersofcouncil">
-          Powers of Council.
-         </a>
-         <ul class="leaders">
-          <li>
-           <a href="#t39c15s39-15-1-notestodecisions-powersofcouncil-ratification">
-            — Ratification.
-           </a>
-          </li>
-         </ul>
-        </li>
-       </ul>
        <ul class="leaders">
         <li>
          <a href="#t39c15s39-15-2-notestodecisions-compensationrequired">
@@ -44099,7 +44182,13 @@
      </h3>
      <ol type="a">
       <li id="t39c27s39-27-5ol1a">
-       Not later than June 1, 2006, the commission, in consultation with the state building commissioner and the chief of energy and community services, shall adopt regulations, in accordance with the provisions of chapter 35 of title 42, establishing minimum efficiency standards for the types of new products set forth in § 39-27-4(a). The regulations shall provide for the following minimum efficiency standards:
+       Not later than June 1, 2006, the commission, in consultation with the state building commissioner and the chief of energy and community services, shall adopt regulations, in accordance with the provisions of chapter 35 of title 42, establishing minimum efficiency standards for the types of new products set forth in §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.39.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t39c27s39-27-4ol1a" target="_self">
+         39-27-4(a)
+        </a>
+       </cite>
+       . The regulations shall provide for the following minimum efficiency standards:
        <ol>
         <li id="t39c27s39-27-5ol1a1">
          Automatic commercial icemakers shall meet the energy efficiency requirements shown in table A-7 of § 1605.3 of the California Code of Regulations, Title 20: Division 2, Chapter 4, Article 4: Appliance Efficiency Regulations as adopted on December 15, 2004.
@@ -44137,7 +44226,13 @@
          </ol>
         </li>
         <li id="t39c27s39-27-5ol1a8">
-         Low-voltage dry-type distribution transformers shall meet the Class 1 efficiency levels for low-voltage distribution transformers specified in Table 4-2 of the “Guide for Determining Energy Efficiency for Distribution Transformers” published by the National Electrical Manufacturers Association (NEMA Standard TP-1-2002).
+         Low-voltage dry-type distribution transformers shall meet the Class 1 efficiency levels for low-voltage distribution transformers specified in Table
+         <cite class="ocri">
+          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.04.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t04c02" target="_blank">
+           4-2
+          </a>
+         </cite>
+         of the “Guide for Determining Energy Efficiency for Distribution Transformers” published by the National Electrical Manufacturers Association (NEMA Standard TP-1-2002).
         </li>
         <li id="t39c27s39-27-5ol1a9">
          Metal-halide lamp fixtures that operate in a vertical position and are designed to be operated with lamps rated greater than or equal to one hundred fifty watts (150 W) but less than or equal to five hundred watts (500 W) shall not contain a probe-start metal-halide lamp ballast.
