--- a/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t40.1">
     <b>
      Title 40.1 Behavioral Healthcare, Developmental Disabilities and Hospitals
@@ -3771,7 +3774,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-5; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-5; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-5; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-5" target="_self">
+         40.1-5-5
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -3868,7 +3877,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; P.L. 1968, ch. 168, § 2; G.L. 1956, § 40-20-6; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-6; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 203, § 1; P.L. 1976, ch. 215, § 1; P.L. 1997, ch. 326, § 136.
+       P.L. 1966, ch. 100, § 1; P.L. 1968, ch. 168, § 2; G.L. 1956, § 40-20-6; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-6" target="_self">
+         40.1-5-6
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 203, § 1; P.L. 1976, ch. 215, § 1; P.L. 1997, ch. 326, § 136.
       </p>
      </div>
      <div>
@@ -3977,7 +3992,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-7; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-7; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1; P.L. 1997, ch. 326, § 136; P.L. 2005, ch. 400, § 2; P.L. 2006, ch. 597, § 2.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-7; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-7" target="_self">
+         40.1-5-7
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1; P.L. 1997, ch. 326, § 136; P.L. 2005, ch. 400, § 2; P.L. 2006, ch. 597, § 2.
       </p>
      </div>
      <div>
@@ -4577,7 +4598,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-13; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-13; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 203, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-13; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-13" target="_self">
+         40.1-5-13
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 203, § 1.
       </p>
      </div>
      <div>
@@ -5278,7 +5305,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-17; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-17; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-17; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-17" target="_self">
+         40.1-5-17
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5314,7 +5347,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; P.L. 1968, ch. 168, § 6; G.L. 1956, § 40-20-15; Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-15; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1; P.L. 1983, ch. 30, § 1; P.L. 2001, ch. 80, § 1.
+       P.L. 1966, ch. 100, § 1; P.L. 1968, ch. 168, § 6; G.L. 1956, § 40-20-15; Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-15" target="_self">
+         40.1-5-15
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1; P.L. 1983, ch. 30, § 1; P.L. 2001, ch. 80, § 1.
       </p>
      </div>
     </div>
@@ -5333,7 +5372,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-18, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-18; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-18, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-18" target="_self">
+         40.1-5-18
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5352,7 +5397,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-20, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-20; P.L. 1974, ch. 119, § 1; P.L. 1997, ch. 326, § 136.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-20, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-20" target="_self">
+         40.1-5-20
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1997, ch. 326, § 136.
       </p>
      </div>
     </div>
@@ -5371,7 +5422,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-21, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-21; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-21, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-21" target="_self">
+         40.1-5-21
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5404,7 +5461,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-22, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-22; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 140, § 19.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-22, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-22" target="_self">
+         40.1-5-22
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 140, § 19.
       </p>
      </div>
     </div>
@@ -5423,7 +5486,13 @@
        History of Section.
       </h4>
       <p>
-       1966, ch. 100, § 1; G.L. 1956, § 40-20-23, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-23; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1.
+       1966, ch. 100, § 1; G.L. 1956, § 40-20-23, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-23" target="_self">
+         40.1-5-23
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1976, ch. 215, § 1.
       </p>
      </div>
      <div>
@@ -5452,7 +5521,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-24, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-24; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-24, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-24" target="_self">
+         40.1-5-24
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5471,7 +5546,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-25, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-25; P.L. 1974, ch. 119, § 1; P.L. 1997, ch. 326, § 136.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-25, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-25" target="_self">
+         40.1-5-25
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1; P.L. 1997, ch. 326, § 136.
       </p>
      </div>
      <div>
@@ -5500,7 +5581,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-26, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-26; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-26, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-26" target="_self">
+         40.1-5-26
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5601,7 +5688,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-27, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-27; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-27, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-27" target="_self">
+         40.1-5-27
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5620,7 +5713,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-28, Reorg. Plan No. 1, 1970; G.L. 1956, § 40.1-5-28; P.L. 1974, ch. 119, § 1.
+       P.L. 1966, ch. 100, § 1; G.L. 1956, § 40-20-28, Reorg. Plan No. 1, 1970; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c05s40.1-5-28" target="_self">
+         40.1-5-28
+        </a>
+       </cite>
+       ; P.L. 1974, ch. 119, § 1.
       </p>
      </div>
     </div>
@@ -5654,7 +5753,19 @@
        </b>
       </h4>
       <p>
-       This chapter (G.L. 1896, ch. 82, §§ 1-9, 11, 20, 41, 42 and 48; P.L. 1902, ch. 990, §§ 1, 2; P.L. 1908, ch. 1557, § 1; G.L. 1909, ch. 96, §§ 1-9, 11, 20, 41, 42 and 48; G.L. 1909, ch. 96, § 54 and G.L. 1909, ch. 364, § 24; P.L. 1915, ch. 1237, §§ 1, 2; G.L. 1923, ch. 108, §§ 1-11, 20, 41, 42, 48 and 54; G.L. 1923, ch. 417, § 24; G.L. 1938, ch. 71, §§ 1-9, 20, 41, 42, 47 and 52; G.L. 1938, ch. 633, § 24; impl. am. P.L. 1939, ch. 660, §§ 65, 80; G.L. 1956, §§ 26-2-1 — 26-2-19; Reorg. Plan No. 1, 1970; P.L. 1979, ch. 39, § 1; G.L. 1956, §§ 40.1-5.1-1 — 40.1-5.1-19), concerning commitment of insane persons, was repealed by P.L. 1983, ch. 239, § 1.
+       This chapter (G.L. 1896, ch. 82, §§ 1-9, 11, 20, 41, 42 and 48; P.L. 1902, ch. 990, §§ 1, 2; P.L. 1908, ch. 1557, § 1; G.L. 1909, ch. 96, §§ 1-9, 11, 20, 41, 42 and 48; G.L. 1909, ch. 96, § 54 and G.L. 1909, ch. 364, § 24; P.L. 1915, ch. 1237, §§ 1, 2; G.L. 1923, ch. 108, §§ 1-11, 20, 41, 42, 48 and 54; G.L. 1923, ch. 417, § 24; G.L. 1938, ch. 71, §§ 1-9, 20, 41, 42, 47 and 52; G.L. 1938, ch. 633, § 24; impl. am. P.L. 1939, ch. 660, §§ 65, 80; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.26.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t26c02s26-2-1" target="_blank">
+         26-2-1
+        </a>
+       </cite>
+       — 26-2-19; Reorg. Plan No. 1, 1970; P.L. 1979, ch. 39, § 1; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c5.1s40.1-5.1-1" target="_self">
+         40.1-5.1-1
+        </a>
+       </cite>
+       — 40.1-5.1-19), concerning commitment of insane persons, was repealed by P.L. 1983, ch. 239, § 1.
       </p>
      </div>
     </div>
@@ -9157,7 +9268,19 @@
        </b>
       </h4>
       <p>
-       Former §§ 40.1-21-3 — 40.1-21-3.2 (P.L. 1967, ch. 223, § 1; P.L. 1968, ch. 178, § 1; Reorg. Plan No. 1, 1970; P.L. 1978, ch. 87, § 1; G.L. 1956, § 23-43-3; G.L. 1956, §§ 26-5-19, 26-5-20; P.L. 1979, ch. 39, § 1; P.L. 1987, ch. 181, § 2; P.L. 1993, ch. 120, § 3), concerning the control and maintenance of the Doctor Joseph H. Ladd Center, continuation of powers of department, and the change of name to the Dr. Joseph H. Ladd Center, were repealed by P.L. 1995, ch. 122, § 1, effective July 1, 1995.
+       Former §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c21s40.1-21-3" target="_self">
+         40.1-21-3
+        </a>
+       </cite>
+       — 40.1-21-3.2 (P.L. 1967, ch. 223, § 1; P.L. 1968, ch. 178, § 1; Reorg. Plan No. 1, 1970; P.L. 1978, ch. 87, § 1; G.L. 1956, § 23-43-3; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.26.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t26c05s26-5-19" target="_blank">
+         26-5-19
+        </a>
+       </cite>
+       , 26-5-20; P.L. 1979, ch. 39, § 1; P.L. 1987, ch. 181, § 2; P.L. 1993, ch. 120, § 3), concerning the control and maintenance of the Doctor Joseph H. Ladd Center, continuation of powers of department, and the change of name to the Dr. Joseph H. Ladd Center, were repealed by P.L. 1995, ch. 122, § 1, effective July 1, 1995.
       </p>
      </div>
     </div>
@@ -9205,7 +9328,13 @@
        History of Section.
       </h4>
       <p>
-       P.L. 1967, ch. 223, § 1; G.L. 1956, § 23-43-3; P.L. 1968, ch. 178, § 1; Reorg. Plan No. 1, 1970; G.L. 1956, § 23-43-4; P.L. 1979, ch. 39, § 1; G.L. 1956, § 40.1-21-4; P.L. 1987, ch. 181, § 2; P.L. 1995, ch. 122, § 1; P.L. 2006, ch. 216, § 30; P.L. 2018, ch. 47, art. 13, § 5.
+       P.L. 1967, ch. 223, § 1; G.L. 1956, § 23-43-3; P.L. 1968, ch. 178, § 1; Reorg. Plan No. 1, 1970; G.L. 1956, § 23-43-4; P.L. 1979, ch. 39, § 1; G.L. 1956, §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c21s40.1-21-4" target="_self">
+         40.1-21-4
+        </a>
+       </cite>
+       ; P.L. 1987, ch. 181, § 2; P.L. 1995, ch. 122, § 1; P.L. 2006, ch. 216, § 30; P.L. 2018, ch. 47, art. 13, § 5.
       </p>
      </div>
      <div>
@@ -10976,7 +11105,13 @@
        </b>
       </h4>
       <p>
-       Sections 40.1-22-30 and 40.1-22-31 (P.L. 1971, ch. 266, § 2; P.L. 1978, ch. 195, § 1; G.L. 1956, U§ 23-43.1-30, 23-43.1-31; P.L. 1979, ch. 39, § 1; P.L. 1979, ch. 246, § 1), concerning early intervention program for developmentally disabled infants and evaluation under court order, were repealed by P.L. 1995, ch. 122, § 2, effective July 1, 1995.
+       Sections
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t40.1c22s40.1-22-30" target="_self">
+         40.1-22-30
+        </a>
+       </cite>
+       and 40.1-22-31 (P.L. 1971, ch. 266, § 2; P.L. 1978, ch. 195, § 1; G.L. 1956, U§ 23-43.1-30, 23-43.1-31; P.L. 1979, ch. 39, § 1; P.L. 1979, ch. 246, § 1), concerning early intervention program for developmentally disabled infants and evaluation under court order, were repealed by P.L. 1995, ch. 122, § 2, effective July 1, 1995.
       </p>
       <p>
        Sections 40.1-22-32 through 40.1-22-38 (P.L. 1981, ch. 355, § 2; P.L. 1982, ch. 268, §§ 1, 2; P.L. 1983, ch. 302, § 1; P.L. 1984, ch. 189, § 1; P.L. 1987, ch. 290, § 1), concerning early intervention program for developmentally disabled infants, permanent advisory commission on early intervention, membership of commission, length of term and compensation of members, commission meetings, recommendations of commission, and cumulative nature of commission’s powers, respectively, were repealed by P.L. 1991, ch. 243, § 1, effective July 1, 1991.
