--- a/transforms/ri/ocri/r70/gov.ri.code.title.43.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.43.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t43">
     <b>
      Title 43 Statutes and Statutory Construction
@@ -3157,6 +3160,42 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t43c03s43-3-26-notestodecisions-ingeneral">
+          In General.
+         </a>
+        </li>
+        <li>
+         <a href="#t43c03s43-3-26-notestodecisions-impliedrepeals">
+          Implied Repeals.
+         </a>
+        </li>
+        <li>
+         <a href="#t43c03s43-3-26-notestodecisions-legislativeenactments">
+          Legislative Enactments.
+         </a>
+        </li>
+        <li>
+         <a href="#t43c03s43-3-26-notestodecisions-proofoffinancialresponsibility">
+          Proof of Financial Responsibility.
+         </a>
+        </li>
+        <li>
+         <a href="#t43c03s43-3-26-notestodecisions-specialact">
+          Special Act.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t43c03s43-3-26-notestodecisions-specialact-locallaws">
+            — Local Laws.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t43c03s43-3-26-notestodecisions-ingeneral">
         <b>
@@ -3594,40 +3633,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t43c03s43-3-26-notestodecisions-ingeneral">
-        In General.
-       </a>
-      </li>
-      <li>
-       <a href="#t43c03s43-3-26-notestodecisions-impliedrepeals">
-        Implied Repeals.
-       </a>
-      </li>
-      <li>
-       <a href="#t43c03s43-3-26-notestodecisions-legislativeenactments">
-        Legislative Enactments.
-       </a>
-      </li>
-      <li>
-       <a href="#t43c03s43-3-26-notestodecisions-proofoffinancialresponsibility">
-        Proof of Financial Responsibility.
-       </a>
-      </li>
-      <li>
-       <a href="#t43c03s43-3-26-notestodecisions-specialact">
-        Special Act.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t43c03s43-3-26-notestodecisions-specialact-locallaws">
-          — Local Laws.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t43c04s43-4-1-snav01">
        <a href="#t43c04s43-4-1">
