--- a/transforms/ri/ocri/r70/gov.ri.code.title.46.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.46.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t46">
     <b>
      Title 46 Waters and Navigation
@@ -4952,7 +4955,25 @@
       . The fees shall be assessed as follows:
      </p>
      <p>
-      Overall Vessel Length (Ft) User Fee 1-15 feet $2.00 16-20 feet $2.00 21-25 feet $6.00 26-30 feet $8.00 31-35 feet $12.00 36-40 feet $14.00 41-45 feet $16.00 46-50 feet $18.00 51 feet and above $20.00
+      Overall Vessel Length (Ft) User Fee 1-15 feet $2.00
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.16.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t16c20" target="_blank">
+        16-20
+       </a>
+      </cite>
+      feet $2.00
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.21.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t21c25" target="_blank">
+        21-25
+       </a>
+      </cite>
+      feet $6.00 26-30 feet $8.00
+      <cite class="ocri">
+       <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.31.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t31c35" target="_blank">
+        31-35
+       </a>
+      </cite>
+      feet $12.00 36-40 feet $14.00 41-45 feet $16.00 46-50 feet $18.00 51 feet and above $20.00
      </p>
      <p>
       Click to view
@@ -6494,7 +6515,31 @@
        </b>
       </h4>
       <p>
-       The former chapter (G.L. 1896, ch. 117, §§ 2, 3, 5-10, 12; G.L. 1909, ch. 143, §§ 2, 3, 5-10, 12; G.L. 1923, ch. 148, §§ 2, 3, 5-10, 12; P.L. 1923, ch. 476, §§ 1, 2; G.L. 1938, ch. 114, §§ 2, 3, 5-10, 12; G.L. 1956, ch. 114, §§ 1-18, 20, 21; P.L. 1956, ch. 3853, § 1; P.L. 1970, ch. 111, § 7; P.L. 1970, ch. 258, § 1; P.L. 1979, ch. 354, §§ 1, 2), concerning pilots, was repealed by P.L. 1981, ch. 388, § 1, and the present chapter on the same subject substituted therefor.
+       The former chapter (G.L. 1896, ch. 117, §§ 2, 3,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.05.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t05c10" target="_blank">
+         5-10
+        </a>
+       </cite>
+       , 12; G.L. 1909, ch. 143, §§ 2, 3,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.05.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t05c10" target="_blank">
+         5-10
+        </a>
+       </cite>
+       , 12; G.L. 1923, ch. 148, §§ 2, 3,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.05.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t05c10" target="_blank">
+         5-10
+        </a>
+       </cite>
+       , 12; P.L. 1923, ch. 476, §§ 1, 2; G.L. 1938, ch. 114, §§ 2, 3,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.05.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t05c10" target="_blank">
+         5-10
+        </a>
+       </cite>
+       , 12; G.L. 1956, ch. 114, §§ 1-18, 20, 21; P.L. 1956, ch. 3853, § 1; P.L. 1970, ch. 111, § 7; P.L. 1970, ch. 258, § 1; P.L. 1979, ch. 354, §§ 1, 2), concerning pilots, was repealed by P.L. 1981, ch. 388, § 1, and the present chapter on the same subject substituted therefor.
       </p>
      </div>
      <div>
@@ -15221,7 +15266,13 @@
       </h4>
       <p>
        P.L. 1997, ch. 32, § 1 repealed § 46-12.5-4 referred to in subsection (c).
-       For comparable provisions, see § 46-12.5.1-4.
+       For comparable provisions, see §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c12.5.1s46-12.5.1-4" target="_self">
+         46-12.5.1-4
+        </a>
+       </cite>
+       .
       </p>
      </div>
     </div>
@@ -19884,7 +19935,13 @@
      </p>
      <ol>
       <li id="t46c13.2s46-13.2-1ol11">
-       “Building official” means the local building official authorized in accordance with § 23-27.3-107 or the state building code commissioner authorized in accordance with § 23-27.3-108.2, as applicable;
+       “Building official” means the local building official authorized in accordance with § 23-27.3-107 or the state building code commissioner authorized in accordance with §
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.23.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t23c27.3as1s23-27.3-108.2" target="_blank">
+         23-27.3-108.2
+        </a>
+       </cite>
+       , as applicable;
       </li>
       <li id="t46c13.2s46-13.2-1ol12">
        “Board” means the Rhode Island contractors’ registration and licensing board;
@@ -22564,49 +22621,7 @@
            46-15
           </a>
          </cite>
-         ,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .1,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .2,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .3,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .4,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .5,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .6,
-         <cite class="ocri">
-          <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c15" target="_self">
-           46-15
-          </a>
-         </cite>
-         .7,
+         , 46-15.1, 46-15.2, 46-15.3, 46-15.4, 46-15.5, 46-15.6, 46-15.7,
          <cite class="ocri">
           <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.42.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t42c46" target="_blank">
            42-46
@@ -22728,7 +22743,13 @@
        </b>
       </h4>
       <p>
-       § 39-1-2(20), referred to in this section, was changed to “§ 39-1-2(a)(20)” by P.L. 2020, ch. 79, § 2.
+       § 39-1-2(20), referred to in this section, was changed to “§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.39.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t39c01s39-1-2ol1a20" target="_blank">
+         39-1-2(a)(20)
+        </a>
+       </cite>
+       ” by P.L. 2020, ch. 79, § 2.
       </p>
      </div>
     </div>
@@ -25879,7 +25900,13 @@
        </b>
       </h4>
       <p>
-       § 39-1-2(20), referred to in this section, was changed to “§ 39-1-2(a)(20)” by P.L. 2020, ch. 79,
+       § 39-1-2(20), referred to in this section, was changed to “§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.39.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t39c01s39-1-2ol1a20" target="_blank">
+         39-1-2(a)(20)
+        </a>
+       </cite>
+       ” by P.L. 2020, ch. 79,
        § 2.
       </p>
      </div>
@@ -31361,7 +31388,43 @@
      </p>
      <ol>
       <li id="t46c22s46-22-19ol11">
-       Any person who violates any provision of §§ 46-22-3 — 46-22-5, 46-22-8, 46-22-9.2, 46-22-10, and 46-22-13, or who violates any rule or regulation made under the provisions of those sections shall be guilty of a civil violation and be subject to a fine not to exceed one hundred dollars ($100) for each violation. Jurisdiction over violations of this subsection shall be with the traffic tribunal. In accordance with chapter 42-17.10, any person charged with violating any rule or regulation made under the provisions of this subsection may elect to dispose of the charge without personally appearing before the traffic tribunal by mailing or delivering the form and summons to the traffic tribunal with a check or money order in the amount of one hundred dollars ($100).
+       Any person who violates any provision of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-3" target="_self">
+         46-22-3
+        </a>
+       </cite>
+       —
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-5" target="_self">
+         46-22-5
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-8" target="_self">
+         46-22-8
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-9.2" target="_self">
+         46-22-9.2
+        </a>
+       </cite>
+       ,
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-10" target="_self">
+         46-22-10
+        </a>
+       </cite>
+       , and
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c22s46-22-13" target="_self">
+         46-22-13
+        </a>
+       </cite>
+       , or who violates any rule or regulation made under the provisions of those sections shall be guilty of a civil violation and be subject to a fine not to exceed one hundred dollars ($100) for each violation. Jurisdiction over violations of this subsection shall be with the traffic tribunal. In accordance with chapter 42-17.10, any person charged with violating any rule or regulation made under the provisions of this subsection may elect to dispose of the charge without personally appearing before the traffic tribunal by mailing or delivering the form and summons to the traffic tribunal with a check or money order in the amount of one hundred dollars ($100).
       </li>
       <li id="t46c22s46-22-19ol12">
        Any person who violates any provision of §§
@@ -37428,17 +37491,17 @@
       <p>
        P.L. 1999, ch. 307, § 3 provides that the provisions of that act or any other provisions of the general laws to the contrary, the members of the Narragansett Bay water quality management district commission and the officers thereof appointed, qualified, and in office immediately prior to the passage of that act shall continue to be members of the Narragansett Bay Commission during the remainder of the terms for which they were appointed or until their resignation, death, incapacity, or other removal from office. All property or rights to property held by the Narragansett Bay water quality management district commission shall transfer to and be held by the Narragansett Bay Commission without any necessity for any document of transfer or recording thereof. Any act taken by the Narragansett Bay water quality management district commission prior to the passage of that act, valid at the time such act was taken, shall, subject to such discretion as the commission may lawfully exercise to the continuance or modification thereof, remain valid and shall be considered to have been taken by the Narragansett Bay Commission. The secretary of the commission shall maintain the books and records of the Narragansett Bay water quality management district commission as the books and records of the Narragansett Bay Commission. The authority granted and obligations imposed by section
        <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c25" target="_self">
-         46-25
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c25s46-25-37" target="_self">
+         46-25-37
         </a>
        </cite>
-       -37 through and including section
+       through and including section
        <cite class="ocri">
-        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c25" target="_self">
-         46-25
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c25s46-25-44" target="_self">
+         46-25-44
         </a>
        </cite>
-       -44 of chapter
+       of chapter
        <cite class="ocri">
         <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.46.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t46c25" target="_self">
          46-25
@@ -38789,6 +38852,27 @@
         NOTES TO DECISIONS
        </b>
       </h4>
+      <nav>
+       <ul class="leaders">
+        <li>
+         <a href="#t46c25s46-25-25.4-notestodecisions-initiationofproceedingsisdiscretionary">
+          Initiation of Proceedings Is Discretionary.
+         </a>
+        </li>
+        <li>
+         <a href="#t46c25s46-25-25.4-notestodecisions-jurytrial">
+          Jury Trial.
+         </a>
+         <ul class="leaders">
+          <li>
+           <a href="#t46c25s46-25-25.4-notestodecisions-jurytrial-changeinfinebyjury">
+            — Change in Fine by Jury.
+           </a>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </nav>
       <div>
        <h5 class="notes_section" id="t46c25s46-25-25.4-notestodecisions-initiationofproceedingsisdiscretionary">
         <b>
@@ -40128,25 +40212,6 @@
      </b>
     </h2>
     <nav>
-     <ul class="leaders">
-      <li>
-       <a href="#t46c25s46-25-25.4-notestodecisions-initiationofproceedingsisdiscretionary">
-        Initiation of Proceedings Is Discretionary.
-       </a>
-      </li>
-      <li>
-       <a href="#t46c25s46-25-25.4-notestodecisions-jurytrial">
-        Jury Trial.
-       </a>
-       <ul class="leaders">
-        <li>
-         <a href="#t46c25s46-25-25.4-notestodecisions-jurytrial-changeinfinebyjury">
-          — Change in Fine by Jury.
-         </a>
-        </li>
-       </ul>
-      </li>
-     </ul>
      <ul class="leaders">
       <li id="t46c25.1s46-25.1-1-snav01">
        <a href="#t46c25.1s46-25.1-1">
