--- a/transforms/ri/ocri/r70/gov.ri.code.title.47.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.47.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t47">
     <b>
      Title 47 Weights and Measures
@@ -2368,7 +2371,13 @@
        </b>
       </h4>
       <p>
-       Sections 47-9-1 through 47-9-9 (G.L. 1896, ch. 139, §§ 1-9; G.L. 1909, ch. 165, §§ 1-9; G.L. 1923, ch. 195, §§ 1-9; G.L. 1938, ch. 408, §§ 1-9), concerning grain and salt and the measurement thereof, were repealed by P.L. 1999, ch. 99, § 2, effective June 24, 1999.
+       Sections
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.47.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t47c09s47-9-1" target="_self">
+         47-9-1
+        </a>
+       </cite>
+       through 47-9-9 (G.L. 1896, ch. 139, §§ 1-9; G.L. 1909, ch. 165, §§ 1-9; G.L. 1923, ch. 195, §§ 1-9; G.L. 1938, ch. 408, §§ 1-9), concerning grain and salt and the measurement thereof, were repealed by P.L. 1999, ch. 99, § 2, effective June 24, 1999.
       </p>
      </div>
     </div>
