--- a/transforms/ri/ocri/r70/gov.ri.code.title.04.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.04.html
@@ -10,10 +10,13 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-12.This document is not subject to copyright and is in the public domain." name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16.This document is not subject to copyright and is in the public domain." name="description" />
  </head>
  <body>
   <nav>
+   <p class="transformation">
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-16. This document is not subject to copyright and is in the public domain.
+   </p>
    <h1 id="t04">
     <b>
      Title 4 Animals and Animal Husbandry
@@ -11680,7 +11683,19 @@
        </b>
       </h4>
       <p>
-       Former chapter 12 (P.L. 1936, ch. 2353, §§ 1-13; G.L. 1938, ch. 204, §§ 1-15; P.L. 1941, ch. 985, § 1; P.L. 1944, ch. 1398, §§ 1, 2; P.L. 1960, ch. 74, § 7), consisting of §§ 4-12-1 — 4-12-15 and concerning the same subject matter, was repealed by P.L. 1989, ch. 495, § 1, effective July 10, 1989.
+       Former chapter 12 (P.L. 1936, ch. 2353, §§ 1-13; G.L. 1938, ch. 204, §§ 1-15; P.L. 1941, ch. 985, § 1; P.L. 1944, ch. 1398, §§ 1, 2; P.L. 1960, ch. 74, § 7), consisting of §§
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.04.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t04c12s4-12-1" target="_self">
+         4-12-1
+        </a>
+       </cite>
+       —
+       <cite class="ocri">
+        <a href="http://localhost:63342/cic-code-ri-1/transforms/ri/ocri/r70/gov.ri.code.title.04.html?_ijt=g0et01fnnanfldggrlb88qoab6&amp;_ij_reload=RELOAD_ON_SAVE#t04c12s4-12-15" target="_self">
+         4-12-15
+        </a>
+       </cite>
+       and concerning the same subject matter, was repealed by P.L. 1989, ch. 495, § 1, effective July 10, 1989.
       </p>
      </div>
      <div>
